Newcomer tasks: Update change tag links
The patch is the output of the script P45605.

Bug: T329906
Change-Id: I3bd0d15bb2af71379dc378340cb9e4fd77cfed74

--- a/i18n/homepage/ar.json
+++ b/i18n/homepage/ar.json
@@ -136,21 +136,21 @@
 	"tag-mentorship_module_question-description": "أُجرِي التحرير من ميزة \"اسأل مرشدك\" من وحدة الإرشاد على لوحة المستخدم",
 	"tag-mentorship_panel_question": "سؤال من لوحة الإرشاد",
 	"tag-mentorship_panel_question-description": "أُجري التعديل بواسطة خاصية \"اسأل مرشدك\" من لوحة المساعدة",
-	"tag-newcomer_task": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|مهمة الوافد الجديد]]",
+	"tag-newcomer_task": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks|مهمة الوافد الجديد]]",
 	"tag-newcomer_task-description": "تعديل مقترح من وحدة التعديلات المقترحة من لوحة المستخدم للوافد الجديد",
-	"tag-newcomer_task_copyedit": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|مهمة الوافد الجديد: تحرير النسخ]]",
+	"tag-newcomer_task_copyedit": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#copyedit|مهمة الوافد الجديد: تحرير النسخ]]",
 	"tag-newcomer_task_copyedit-description": "تعديل «تحرير النسخ» مقترح من وحدة التعديلات المقترحة من لوحة المستخدم للوافدين الجدد",
-	"tag-newcomer_task_references": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|مهمة الوافد الجديد: مراجع]]",
+	"tag-newcomer_task_references": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#references|مهمة الوافد الجديد: مراجع]]",
 	"tag-newcomer_task_references-description": "تعديل «مراجع» مقترح من وحدة التعديلات المقترحة من لوحة المستخدم للوافدين الجدد",
-	"tag-newcomer_task_update": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|مهمة الوافد الجديد: تحديث]]",
+	"tag-newcomer_task_update": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#update|مهمة الوافد الجديد: تحديث]]",
 	"tag-newcomer_task_update-description": "تعديل «تحديث» مقترح من وحدة التعديلات المقترحة من لوحة المستخدم للوافدين الجدد",
-	"tag-newcomer_task_expand": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|مهمة الوافد الجديد: توسعة]]",
+	"tag-newcomer_task_expand": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#expand|مهمة الوافد الجديد: توسعة]]",
 	"tag-newcomer_task_expand-description": "تعديل «توسعة» مقترح من وحدة التعديلات المقترحة من لوحة المستخدم للوافدين الجدد",
-	"tag-newcomer_task_links": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|مهمة الوافد الجديد: روابط]]",
+	"tag-newcomer_task_links": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#links|مهمة الوافد الجديد: روابط]]",
 	"tag-newcomer_task_links-description": "تعديل «روابط» مقترح من وحدة التعديلات المقترحة من لوحة المستخدم للوافدين الجدد",
-	"tag-newcomer_task_add_link": "[[mw:Special:MyLanguage/Growth/Personalized first day/Structured tasks/Add a link|اقتراح: إضافة روابط]]",
+	"tag-newcomer_task_add_link": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#s-link|اقتراح: إضافة روابط]]",
 	"tag-newcomer_task_add_link-description": "مهمة التعديل «إضافة وصلة» مقترحة من وحدة التعديلات المقترحة من لوحة المستخدم للوافدين الجدد",
-	"tag-newcomer_task_image_suggestion": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Structured_tasks/Add_an_image|اقتراح: إضافة صور]]",
+	"tag-newcomer_task_image_suggestion": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#s-image|اقتراح: إضافة صور]]",
 	"tag-newcomer_task_image_suggestion-description": "مهمة تعديل «إضافة صور» مقترحة من وحدة التعديلات المقترحة من لوحة المستخدم للوافدين الجدد",
 	"growthexperiments-homepage-help-dialog-title": "طرح السؤال على فريق المساعدة",
 	"growthexperiments-homepage-help-header": "{{GENDER:|احصل|احصلي}} على المساعدة في التحرير",
