--- a/i18n/homepage/ban.json
+++ b/i18n/homepage/ban.json
@@ -97,12 +97,12 @@
 	"growthexperiments-tour-mentor-response-tip-personal-title": "Pakelingan {{GENDER:$1|méntor}}",
 	"growthexperiments-tour-response-button-okay": "Ngerti",
 	"tag-help_module_question": "Petakon modul wantuan",
-	"tag-newcomer_task": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|Sesana sang anganggé anyar]]",
-	"tag-newcomer_task_references": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|Tugas sang anganggé anyar: pustaka]]",
-	"tag-newcomer_task_update": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|Tugas sang anganggé anyar: nganyarin]]",
-	"tag-newcomer_task_links": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|Tugas sang anganggé anyar: pranala]]",
-	"tag-newcomer_task_add_link": "[[mw:Special:MyLanguage/Growth/Personalized first day/Structured tasks/Add a link|Kasaranang: tambahang pranala]]",
-	"tag-newcomer_task_image_suggestion": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Structured_tasks/Add_an_image|Kasaranang: tambahin gambar]]",
+	"tag-newcomer_task": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks|Sesana sang anganggé anyar]]",
+	"tag-newcomer_task_references": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#references|Tugas sang anganggé anyar: pustaka]]",
+	"tag-newcomer_task_update": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#update|Tugas sang anganggé anyar: nganyarin]]",
+	"tag-newcomer_task_links": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#links|Tugas sang anganggé anyar: pranala]]",
+	"tag-newcomer_task_add_link": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#s-link|Kasaranang: tambahang pranala]]",
+	"tag-newcomer_task_image_suggestion": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#s-image|Kasaranang: tambahin gambar]]",
 	"tag-newcomer_task_image_suggestion-description": "Tugas uahan \"nambahin gambar\" ané kasaranang olih modul saran panguahan antuk kaca beranda pendatang anyar",
 	"growthexperiments-homepage-help-dialog-title": "Takon méja wantuan",
 	"growthexperiments-homepage-help-header": "Bakatang wantuan panguahan",
