--- a/i18n/homepage/be.json
+++ b/i18n/homepage/be.json
@@ -122,21 +122,21 @@
 	"tag-mentorship_module_question-description": "Праўка, зробленая з дапамогай функцыі «Задаць пытанне вашаму настаўніку» модуля настаўніцтва хатняй старонкі",
 	"tag-mentorship_panel_question": "Пытанне з акенца настаўніцтва",
 	"tag-mentorship_panel_question-description": "Праўка, зробленая з дапамогай функцыі «Задаць пытанне вашаму настаўніку» акенца дапамогі хатняй старонкі",
-	"tag-newcomer_task": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|Заданне для пачаткоўца]]",
+	"tag-newcomer_task": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks|Заданне для пачаткоўца]]",
 	"tag-newcomer_task-description": "Праўка, прапанаваная модулем прапанаваных правак хатняй старонкі для пачаткоўца",
-	"tag-newcomer_task_copyedit": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|Заданне для пачаткоўца: вычытка]]",
+	"tag-newcomer_task_copyedit": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#copyedit|Заданне для пачаткоўца: вычытка]]",
 	"tag-newcomer_task_copyedit-description": "Праўка, зробленая ў рамках задання «Вычытка», прапанаванага модулем «Прапанаваныя праўкі» хатняй старонкі для пачаткоўца",
-	"tag-newcomer_task_references": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|Заданне для пачаткоўца: крыніцы]]",
+	"tag-newcomer_task_references": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#references|Заданне для пачаткоўца: крыніцы]]",
 	"tag-newcomer_task_references-description": "Праўка, зробленая ў рамках задання «Крыніцы», прапанаванага модулем «Прапанаваныя праўкі» хатняй старонкі для пачаткоўца",
-	"tag-newcomer_task_update": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|Заданне для пачаткоўца: абнаўленне]]",
+	"tag-newcomer_task_update": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#update|Заданне для пачаткоўца: абнаўленне]]",
 	"tag-newcomer_task_update-description": "Праўка, зробленая ў рамках задання «Абнаўленне», прапанаванага модулем «Прапанаваныя праўкі» хатняй старонкі для пачаткоўца",
-	"tag-newcomer_task_expand": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|Заданне для пачаткоўца: пашырэнне]]",
+	"tag-newcomer_task_expand": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#expand|Заданне для пачаткоўца: пашырэнне]]",
 	"tag-newcomer_task_expand-description": "Праўка, зробленая ў рамках задання «Пашырэнне», прапанаванага модулем «Прапанаваныя праўкі» хатняй старонкі для пачаткоўца",
-	"tag-newcomer_task_links": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|Заданне для пачаткоўца: спасылкі]]",
+	"tag-newcomer_task_links": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#links|Заданне для пачаткоўца: спасылкі]]",
 	"tag-newcomer_task_links-description": "Праўка, зробленая ў рамках задання «Спасылкі», прапанаванага модулем «Прапанаваныя праўкі» хатняй старонкі для пачаткоўца",
-	"tag-newcomer_task_add_link": "[[mw:Special:MyLanguage/Growth/Personalized first day/Structured tasks/Add a link|Заданне для пачаткоўца: дадаванне спасылак]]",
+	"tag-newcomer_task_add_link": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#s-link|Заданне для пачаткоўца: дадаванне спасылак]]",
 	"tag-newcomer_task_add_link-description": "Праўка, зробленая ў рамках задання «Дадаванне спасылак», прапанаванага модулем «Прапанаваныя праўкі» хатняй старонкі для пачаткоўца",
-	"tag-newcomer_task_image_suggestion": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Structured_tasks/Add_an_image|Заданне для пачаткоўца: дадаванне выяваў]]",
+	"tag-newcomer_task_image_suggestion": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#s-image|Заданне для пачаткоўца: дадаванне выяваў]]",
 	"tag-newcomer_task_image_suggestion-description": "Праўка, зробленая ў рамках задання «Дадаванне выяваў», прапанаванага модулем «Прапанаваныя праўкі» хатняй старонкі для пачаткоўца",
 	"growthexperiments-homepage-help-dialog-title": "Запытаць у Службе падтрымкі",
 	"growthexperiments-homepage-help-header": "Атрымаць дапамогу з праўкай",
