--- a/i18n/homepage/bg.json
+++ b/i18n/homepage/bg.json
@@ -83,7 +83,7 @@
 	"growthexperiments-homepage-impact-unactivated-subheader-text": "0 редакции към момента",
 	"growthexperiments-homepage-impact-unactivated-suggested-edits-link": "Вижте предложените редакции",
 	"growthexperiments-tour-response-button-okay": "Разбрах",
-	"tag-newcomer_task": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|Задача за новодошъл]]",
+	"tag-newcomer_task": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks|Задача за новодошъл]]",
 	"growthexperiments-homepage-help-header": "Помощ за редактиране",
 	"growthexperiments-homepage-help-subheader": "Най-добри страници за помощ с редактирането",
 	"growthexperiments-homepage-recent-questions-header": "{{GENDER:$1|Ваши}} скорошни въпроси",
