--- a/i18n/homepage/bn.json
+++ b/i18n/homepage/bn.json
@@ -129,21 +129,21 @@
 	"tag-mentorship_module_question-description": "নীড়পাতার মেন্টরশিপ মডিউলের \"প্রশ্ন করুন\" সুবিধা ব্যবহার করে করা সম্পাদনা",
 	"tag-mentorship_panel_question": "মেন্টরশিপ প্যানেলের প্রশ্ন",
 	"tag-mentorship_panel_question-description": "সাহায্য প্যানেলের \"মেন্টরকে প্রশ্ন করুন\" সুবিধা ব্যবহার করে কৃত সম্পাদনা",
-	"tag-newcomer_task": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|নবাগতদের কাজ]]",
+	"tag-newcomer_task": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks|নবাগতদের কাজ]]",
 	"tag-newcomer_task-description": "নবাগতদের নীড়পাতার পরামর্শকৃত সম্পাদনাগুলো মডিউল দ্বারা পরামর্শকৃত",
-	"tag-newcomer_task_copyedit": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|নবাগতদের কাজ: রচনা সংশোধন]]",
+	"tag-newcomer_task_copyedit": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#copyedit|নবাগতদের কাজ: রচনা সংশোধন]]",
 	"tag-newcomer_task_copyedit-description": "নবাগতের নীড়পাতায় পরামর্শকৃত সম্পাদনা মডিউল কর্তৃক \"রচনা সংশোধন\" সম্পাদনার পরামর্শ",
-	"tag-newcomer_task_references": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|নবাগতদের কাজ: তথ্যসূত্র]]",
+	"tag-newcomer_task_references": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#references|নবাগতদের কাজ: তথ্যসূত্র]]",
 	"tag-newcomer_task_references-description": "নবাগতের নীড়পাতায় পরামর্শকৃত সম্পাদনা মডিউল কর্তৃক \"তথ্যসূত্র\" সম্পাদনার পরামর্শ",
-	"tag-newcomer_task_update": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|নবাগতদের কাজ: হালনাগাদ করা]]",
+	"tag-newcomer_task_update": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#update|নবাগতদের কাজ: হালনাগাদ করা]]",
 	"tag-newcomer_task_update-description": "নবাগতের নীড়পাতায় পরামর্শকৃত সম্পাদনা মডিউল কর্তৃক \"হালনাগাদ\" সম্পাদনার পরামর্শ",
-	"tag-newcomer_task_expand": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|নবাগতদের কাজ: সম্প্রসারণ]]",
+	"tag-newcomer_task_expand": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#expand|নবাগতদের কাজ: সম্প্রসারণ]]",
 	"tag-newcomer_task_expand-description": "নবাগতের নীড়পাতায় পরামর্শকৃত সম্পাদনা মডিউল কর্তৃক \"সম্প্রসারণ\" সম্পাদনার পরামর্শ",
-	"tag-newcomer_task_links": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|নবাগতদের কাজ: লিঙ্ক]]",
+	"tag-newcomer_task_links": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#links|নবাগতদের কাজ: লিঙ্ক]]",
 	"tag-newcomer_task_links-description": "নবাগতের নীড়পাতায় পরামর্শকৃত সম্পাদনা মডিউল কর্তৃক \"লিঙ্ক\" সম্পাদনার পরামর্শ",
-	"tag-newcomer_task_add_link": "[[mw:Special:MyLanguage/Growth/Personalized first day/Structured tasks/Add a link|পরামর্শ: লিঙ্ক যুক্ত করা]]",
+	"tag-newcomer_task_add_link": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#s-link|পরামর্শ: লিঙ্ক যুক্ত করা]]",
 	"tag-newcomer_task_add_link-description": "নবাগতের নীড়পাতায় পরামর্শকৃত সম্পাদনা মডিউল কর্তৃক \"লিঙ্ক যুক্তকরণ\" সম্পাদনার পরামর্শ",
-	"tag-newcomer_task_image_suggestion": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Structured_tasks/Add_an_image|পরামর্শকৃত: ছবি যুক্ত করা]]",
+	"tag-newcomer_task_image_suggestion": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#s-image|পরামর্শকৃত: ছবি যুক্ত করা]]",
 	"tag-newcomer_task_image_suggestion-description": "নবাগতের নীড়পাতায় পরামর্শকৃত সম্পাদনা মডিউল কর্তৃক \"ছবি যুক্তকরণ\" সম্পাদনার পরামর্শ",
 	"growthexperiments-homepage-help-dialog-title": "সাহায্যকেন্দ্রে জিজ্ঞেস করুন",
 	"growthexperiments-homepage-help-header": "সম্পাদনা বিষয়ক সাহায্য পান",
