--- a/i18n/homepage/br.json
+++ b/i18n/homepage/br.json
@@ -8,8 +8,8 @@
 	},
 	"prefs-homepage": "Dibarzhioù evit an implijerien nevez-deuet",
 	"growthexperiments-homepage-enable": "Diskwel pajenn degemer neveziad",
-	"tag-newcomer_task": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|Labour evit an dud nevez-deuet]]",
-	"tag-newcomer_task_add_link": "[[mw:Special:MyLanguage/Growth/Personalized first day/Structured tasks/Add a link|Aliet: ouzhpennañ liammoù]]",
+	"tag-newcomer_task": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks|Labour evit an dud nevez-deuet]]",
+	"tag-newcomer_task_add_link": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#s-link|Aliet: ouzhpennañ liammoù]]",
 	"growthexperiments-homepage-discovery-thanks-header": "Trugarez da vezañ krouet {{GENDER:$1|ho}} kont!",
 	"growthexperiments-addlink-summary-summary": "Arc’hweladur aliañ liammoù: $1 {{PLURAL:$1|liamm}} ouzhpennet.",
 	"growthexperiments-addimage-submitting-title": "O kas...",
