--- a/i18n/homepage/de.json
+++ b/i18n/homepage/de.json
@@ -150,21 +150,21 @@
 	"tag-mentorship_module_question-description": "Bearbeitung durchgeführt im Modul „Frage deine(n) Lotsen/Lotsin“",
 	"tag-mentorship_panel_question": "„Frage deine(n) Lotsin/Lotsen“ im Hilfebereich",
 	"tag-mentorship_panel_question-description": "Bearbeitung durchgeführt mit der Funktion „Frage deine(n) Lotsin/Lotsen“ im Hilfebereich",
-	"tag-newcomer_task": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|Einstiegs-Aufgabe]]",
+	"tag-newcomer_task": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks|Einstiegs-Aufgabe]]",
 	"tag-newcomer_task-description": "Bearbeitung basierend auf dem Modul 'Vorgeschlagene Bearbeitungen' der Neulings-Startseite",
-	"tag-newcomer_task_copyedit": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|Einstiegs-Aufgabe: Korrekturlesen]]",
+	"tag-newcomer_task_copyedit": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#copyedit|Einstiegs-Aufgabe: Korrekturlesen]]",
 	"tag-newcomer_task_copyedit-description": "„Korrekturlesen“-Bearbeitung basierend auf dem Modul für vorgeschlagene Bearbeitungen der Neulings-Startseite",
-	"tag-newcomer_task_references": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|Einstiegs-Aufgabe: Einzelnachweise]]",
+	"tag-newcomer_task_references": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#references|Einstiegs-Aufgabe: Einzelnachweise]]",
 	"tag-newcomer_task_references-description": "„Einzelnachweise“-Bearbeitung basierend auf dem Modul für vorgeschlagene Bearbeitungen der Neulings-Startseite",
-	"tag-newcomer_task_update": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|Einstiegs-Aufgabe: aktualisieren]]",
+	"tag-newcomer_task_update": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#update|Einstiegs-Aufgabe: aktualisieren]]",
 	"tag-newcomer_task_update-description": "„Aktualisieren“-Bearbeitung basierend auf dem Modul für vorgeschlagene Bearbeitungen der Neulings-Startseite",
-	"tag-newcomer_task_expand": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|Einstiegs-Aufgabe: Erweitern]]",
+	"tag-newcomer_task_expand": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#expand|Einstiegs-Aufgabe: Erweitern]]",
 	"tag-newcomer_task_expand-description": "„Erweitern“-Bearbeitung basierend auf dem Modul „Vorgeschlagene Bearbeitungen“ der Neulings-Startseite",
-	"tag-newcomer_task_links": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|Einstiegs-Aufgabe: Verlinkungen]]",
+	"tag-newcomer_task_links": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#links|Einstiegs-Aufgabe: Verlinkungen]]",
 	"tag-newcomer_task_links-description": "„Verlinken“-Bearbeitung basierend auf dem Modul für vorgeschlagene Bearbeitungen der Neulings-Startseite",
-	"tag-newcomer_task_add_link": "[[mw:Special:MyLanguage/Growth/Personalized first day/Structured tasks/Add a link|Vorgeschlagen: Links hinzufügen]]",
+	"tag-newcomer_task_add_link": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#s-link|Vorgeschlagen: Links hinzufügen]]",
 	"tag-newcomer_task_add_link-description": "„Link hinzufügen“ Bearbeitungsaufgabe basierend auf dem „Vorgeschlagene Bearbeitungen“-Modul der Neulings-Startseite",
-	"tag-newcomer_task_image_suggestion": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Structured_tasks/Add_an_image|Vorgeschlagen: Bilder hinzufügen]]",
+	"tag-newcomer_task_image_suggestion": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#s-image|Vorgeschlagen: Bilder hinzufügen]]",
 	"tag-newcomer_task_image_suggestion-description": "„Bild hinzufügen“-Bearbeitungsaufgabe basierend auf dem Modul für vorgeschlagene Bearbeitungen der Neulings-Startseite",
 	"growthexperiments-homepage-help-dialog-title": "frage auf der Seite „Fragen von Neulingen“",
 	"growthexperiments-homepage-help-header": "Hilfe bei der Bearbeitung erhalten",
