--- a/i18n/homepage/el.json
+++ b/i18n/homepage/el.json
@@ -100,21 +100,21 @@
 	"tag-mentorship_module_question-description": "Επεξεργασία που έγινε από την λειτουργία «Ρωτήστε τον καθοδηγητή σας» στην ενότητα καθοδήγησης της προσωπικής αρχικής σελίδας",
 	"tag-mentorship_panel_question": "Ερώτηση από το πάνελ καθοδήγησης",
 	"tag-mentorship_panel_question-description": "Επεξεργασία που έγινε από τη λειτουργία του πλαισίου βοήθειας «Ρωτήστε τον καθοδηγητή σας»",
-	"tag-newcomer_task": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|Αποστολή νεοεισερχόμενου]]",
+	"tag-newcomer_task": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks|Αποστολή νεοεισερχόμενου]]",
 	"tag-newcomer_task-description": "Επεξεργασία που προτάθηκε από τη λειτουργία προτεινόμενων επεξεργασιών της αρχικής σελίδας νεοεισερχόμενων",
-	"tag-newcomer_task_copyedit": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|Αποστολή νεοεισερχόμενου: επιμέλεια]]",
+	"tag-newcomer_task_copyedit": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#copyedit|Αποστολή νεοεισερχόμενου: επιμέλεια]]",
 	"tag-newcomer_task_copyedit-description": "Επεξεργασία αποστολής «Επιμέλεια» που προτάθηκε από τη λειτουργία προτεινόμενων επεξεργασιών της αρχικής σελίδας νεοεισερχόμενων",
-	"tag-newcomer_task_references": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|Αποστολή νεοεισερχόμενου: παραπομπές]]",
+	"tag-newcomer_task_references": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#references|Αποστολή νεοεισερχόμενου: παραπομπές]]",
 	"tag-newcomer_task_references-description": "Επεξεργασία αποστολής «Παραπομπές» που προτάθηκε από τη λειτουργία προτεινόμενων επεξεργασιών της αρχικής σελίδας νεοεισερχόμενων",
-	"tag-newcomer_task_update": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|Αποστολή νεοεισερχόμενου: ενημέρωση]]",
+	"tag-newcomer_task_update": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#update|Αποστολή νεοεισερχόμενου: ενημέρωση]]",
 	"tag-newcomer_task_update-description": "Επεξεργασία αποστολής «Ενημέρωση» που προτάθηκε από τη λειτουργία προτεινόμενων επεξεργασιών της αρχικής σελίδας νεοεισερχόμενων",
-	"tag-newcomer_task_expand": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|Αποστολή νεοεισερχόμενου: επέκταση]]",
+	"tag-newcomer_task_expand": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#expand|Αποστολή νεοεισερχόμενου: επέκταση]]",
 	"tag-newcomer_task_expand-description": "Επεξεργασία αποστολής «Επέκταση» που προτάθηκε από τη λειτουργία προτεινόμενων επεξεργασιών της αρχικής σελίδας νεοεισερχόμενων",
-	"tag-newcomer_task_links": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|Αποστολή νεοεισερχόμενου: σύνδεσμοι]]",
+	"tag-newcomer_task_links": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#links|Αποστολή νεοεισερχόμενου: σύνδεσμοι]]",
 	"tag-newcomer_task_links-description": "Επεξεργασία «Σύνδεσμοι» που προτάθηκε από τη λειτουργία προτεινόμενων επεξεργασιών της αρχικής σελίδας νεοεισερχόμενων",
-	"tag-newcomer_task_add_link": "[[mw:Special:MyLanguage/Growth/Personalized first day/Structured tasks/Add a link|Προτείνεται: προσθήκη συνδέσμων]]",
+	"tag-newcomer_task_add_link": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#s-link|Προτείνεται: προσθήκη συνδέσμων]]",
 	"tag-newcomer_task_add_link-description": "Επεξεργασία αποστολής «προσθήκη συνδέσμου» που προτάθηκε από τη λειτουργία προτεινόμενων επεξεργασιών της αρχικής σελίδας νεοεισερχόμενων",
-	"tag-newcomer_task_image_suggestion": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Structured_tasks/Add_an_image|Προτείνεται: προσθήκη εικόνων]]",
+	"tag-newcomer_task_image_suggestion": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#s-image|Προτείνεται: προσθήκη εικόνων]]",
 	"tag-newcomer_task_image_suggestion-description": "Επεξεργασία αποστολής «προσθήκη εικόνων» που προτάθηκε από τη λειτουργία προτεινόμενων επεξεργασιών της αρχικής σελίδας νεοεισερχόμενων",
 	"growthexperiments-homepage-help-dialog-title": "Ρωτήστε στο χώρο βοήθειας",
 	"growthexperiments-homepage-help-header": "Πάρετε βοήθεια για την επεξεργασία",
