--- a/i18n/homepage/en.json
+++ b/i18n/homepage/en.json
@@ -123,21 +123,21 @@
 	"tag-mentorship_module_question-description": "Edit made from the homepage mentorship module's \"Ask your mentor\" feature",
 	"tag-mentorship_panel_question": "Mentorship panel question",
 	"tag-mentorship_panel_question-description": "Edit made from the help panel's \"Ask your mentor\" feature",
-	"tag-newcomer_task": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|Newcomer task]]",
+	"tag-newcomer_task": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks|Newcomer task]]",
 	"tag-newcomer_task-description": "Edit suggested by the suggested edits module of the newcomer homepage",
-	"tag-newcomer_task_copyedit": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|Newcomer task: copyedit]]",
+	"tag-newcomer_task_copyedit": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#copyedit|Newcomer task: copyedit]]",
 	"tag-newcomer_task_copyedit-description": "\"Copyedit\" task edit suggested by the suggested edits module of the newcomer homepage",
-	"tag-newcomer_task_references": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|Newcomer task: references]]",
+	"tag-newcomer_task_references": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#references|Newcomer task: references]]",
 	"tag-newcomer_task_references-description": "\"References\" task edit suggested by the suggested edits module of the newcomer homepage",
-	"tag-newcomer_task_update": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|Newcomer task: update]]",
+	"tag-newcomer_task_update": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#update|Newcomer task: update]]",
 	"tag-newcomer_task_update-description": "\"Update\" task edit suggested by the suggested edits module of the newcomer homepage",
-	"tag-newcomer_task_expand": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|Newcomer task: expand]]",
+	"tag-newcomer_task_expand": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#expand|Newcomer task: expand]]",
 	"tag-newcomer_task_expand-description": "\"Expand\" task edit suggested by the suggested edits module of the newcomer homepage",
-	"tag-newcomer_task_links": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|Newcomer task: links]]",
+	"tag-newcomer_task_links": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#links|Newcomer task: links]]",
 	"tag-newcomer_task_links-description": "\"Links\" task edit suggested by the suggested edits module of the newcomer homepage",
-	"tag-newcomer_task_add_link": "[[mw:Special:MyLanguage/Growth/Personalized first day/Structured tasks/Add a link|Suggested: add links]]",
+	"tag-newcomer_task_add_link": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#s-link|Suggested: add links]]",
 	"tag-newcomer_task_add_link-description": "\"Add link\" task edit suggested by the suggested edits module of the newcomer homepage",
-	"tag-newcomer_task_image_suggestion": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Structured_tasks/Add_an_image|Suggested: add images]]",
+	"tag-newcomer_task_image_suggestion": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#s-image|Suggested: add images]]",
 	"tag-newcomer_task_image_suggestion-description": "\"Add images\" task edit suggested by the suggested edits module of the newcomer homepage",
 	"growthexperiments-homepage-help-dialog-title": "Ask the help desk",
 	"growthexperiments-homepage-help-header": "Get help with editing",
