--- a/i18n/homepage/fr.json
+++ b/i18n/homepage/fr.json
@@ -154,21 +154,21 @@
 	"tag-mentorship_module_question-description": "Modification faite depuis la fonctionnalité « Demander à votre tuteur » du module de tutorat de la page d’accueil",
 	"tag-mentorship_panel_question": "Question du panneau de tutorat",
 	"tag-mentorship_panel_question-description": "Modification faite depuis la fonction « Demander à votre tuteur » du panneau d’aide",
-	"tag-newcomer_task": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|Tâche de novice]]",
+	"tag-newcomer_task": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks|Tâche de novice]]",
 	"tag-newcomer_task-description": "Modification suggérée par le module de modifications suggérées de la page d’accueil des nouveaux arrivants",
-	"tag-newcomer_task_copyedit": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|Tâche de novice : relecture]]",
+	"tag-newcomer_task_copyedit": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#copyedit|Tâche de novice : relecture]]",
 	"tag-newcomer_task_copyedit-description": "Tâche de « modification de copie » suggérée par le module de modifications suggérées de la page d’accueil des novices",
-	"tag-newcomer_task_references": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|Tâche de novice : références]]",
+	"tag-newcomer_task_references": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#references|Tâche de novice : références]]",
 	"tag-newcomer_task_references-description": "Tâche de « références » suggérée par le module de modifications suggérées de la page d’accueil des novices",
-	"tag-newcomer_task_update": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|Tâche de novice : mise à jour]]",
+	"tag-newcomer_task_update": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#update|Tâche de novice : mise à jour]]",
 	"tag-newcomer_task_update-description": "Tâche de « mise à jour » suggérée par le module de modifications suggérées de la page d’accueil des novices",
-	"tag-newcomer_task_expand": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|Tâche de novice : développement]]",
+	"tag-newcomer_task_expand": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#expand|Tâche de novice : développement]]",
 	"tag-newcomer_task_expand-description": "Tâche de « développement » suggérée par le module de modifications suggérées de la page d’accueil des novices",
-	"tag-newcomer_task_links": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|Tâche de novice : liens]]",
+	"tag-newcomer_task_links": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#links|Tâche de novice : liens]]",
 	"tag-newcomer_task_links-description": "Tâche de « liens » suggérée par le module de modifications suggérées de la page d’accueil des novices",
-	"tag-newcomer_task_add_link": "[[mw:Special:MyLanguage/Growth/Personalized first day/Structured tasks/Add a link|Suggéré : ajouter des liens]]",
+	"tag-newcomer_task_add_link": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#s-link|Suggéré : ajouter des liens]]",
 	"tag-newcomer_task_add_link-description": "Modification de tâche « Ajouter un lien » suggérée par le module de modifications suggérées de la page d’accueil pour nouveau venu.",
-	"tag-newcomer_task_image_suggestion": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Structured_tasks/Add_an_image|Suggéré : ajouter des images]]",
+	"tag-newcomer_task_image_suggestion": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#s-image|Suggéré : ajouter des images]]",
 	"tag-newcomer_task_image_suggestion-description": "Modification de tâche « Ajouter des images » suggérée par le module des modifications suggérées de la page d’accueil du débutant",
 	"growthexperiments-homepage-help-dialog-title": "Demander au Centre d’assistance",
 	"growthexperiments-homepage-help-header": "Être aidé dans la modification d’une page",
