--- a/i18n/homepage/he.json
+++ b/i18n/homepage/he.json
@@ -134,21 +134,21 @@
 	"tag-mentorship_module_question-description": "עריכה שנעשתה מתוך האפשרות \"תשאל את החונך שלך\" במודול החונכות בדף הבית",
 	"tag-mentorship_panel_question": "שאלה מחלונית החונכות",
 	"tag-mentorship_panel_question-description": "עריכה שנעשתה מתוך האפשרות \"תשאל את החונך שלך\" בחלונית העזרה",
-	"tag-newcomer_task": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|משימה למתחיל]]",
+	"tag-newcomer_task": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks|משימה למתחיל]]",
 	"tag-newcomer_task-description": "עריכה שהוצעה על־ידי מודול העריכות המוצעות של דף הבית למתחילים",
-	"tag-newcomer_task_copyedit": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|משימה למתחיל: הגהה]]",
+	"tag-newcomer_task_copyedit": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#copyedit|משימה למתחיל: הגהה]]",
 	"tag-newcomer_task_copyedit-description": "עריכה במסגרת משימת \"הגהה\" שהוצעה על־ידי מודול העריכות המוצעות של דף הבית למתחילים",
-	"tag-newcomer_task_references": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|משימה למתחיל: מקורות]]",
+	"tag-newcomer_task_references": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#references|משימה למתחיל: מקורות]]",
 	"tag-newcomer_task_references-description": "עריכה במסגרת משימת \"מקורות\" שהוצעה על־ידי מודול העריכות המוצעות של דף הבית למתחילים",
-	"tag-newcomer_task_update": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|משימה למתחיל: עדכון]]",
+	"tag-newcomer_task_update": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#update|משימה למתחיל: עדכון]]",
 	"tag-newcomer_task_update-description": "עריכה במסגרת משימת \"עדכון\" שהוצעה על־ידי מודול העריכות המוצעות של דף הבית למתחילים",
-	"tag-newcomer_task_expand": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|משימה למתחיל: הרחבה]]",
+	"tag-newcomer_task_expand": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#expand|משימה למתחיל: הרחבה]]",
 	"tag-newcomer_task_expand-description": "עריכה במסגרת משימת \"הרחבה\" שהוצעה על־ידי מודול העריכות המוצעות של דף הבית למתחילים",
-	"tag-newcomer_task_links": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|משימה למתחיל: קישורים]]",
+	"tag-newcomer_task_links": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#links|משימה למתחיל: קישורים]]",
 	"tag-newcomer_task_links-description": "עריכה במסגרת משימת \"קישורים\" שהוצעה על־ידי מודול העריכות המוצעות של דף הבית למתחילים",
-	"tag-newcomer_task_add_link": "[[mw:Special:MyLanguage/Growth/Personalized first day/Structured tasks/Add a link|מוצע: הוספת קישורים]]",
+	"tag-newcomer_task_add_link": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#s-link|מוצע: הוספת קישורים]]",
 	"tag-newcomer_task_add_link-description": "עריכה במסגרת משימת \"הוספת קישור\" שהוצעה על־ידי מודול העריכות המוצעות של דף הבית למתחילים",
-	"tag-newcomer_task_image_suggestion": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Structured_tasks/Add_an_image|מוצע: הוספת תמונות]]",
+	"tag-newcomer_task_image_suggestion": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#s-image|מוצע: הוספת תמונות]]",
 	"tag-newcomer_task_image_suggestion-description": "עריכה במסגרת משימת \"הוספת תמונות\" שהוצעה על־ידי מודול העריכות המוצעות של דף הבית למתחילים",
 	"growthexperiments-homepage-help-dialog-title": "לשאול בחממה",
 	"growthexperiments-homepage-help-header": "{{GENDER:|קבל|קבלי}} עזרה עם עריכה",
