--- a/i18n/homepage/ia.json
+++ b/i18n/homepage/ia.json
@@ -124,21 +124,21 @@
 	"tag-mentorship_module_question-description": "Modification facite a partir del function \"Demandar a tu mentor\" del modulo de mentorato del pagina principal",
 	"tag-mentorship_panel_question": "Question del pannello de mentorato",
 	"tag-mentorship_panel_question-description": "Modification facite con le function \"Demandar a tu mentor\" del pannello de adjuta",
-	"tag-newcomer_task": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|Carga de novicio]]",
+	"tag-newcomer_task": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks|Carga de novicio]]",
 	"tag-newcomer_task-description": "Modification suggerite per le modulo de modificationes suggerite del pagina de initio pro novicios",
-	"tag-newcomer_task_copyedit": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|Carga de novicio: correction de probas]]",
+	"tag-newcomer_task_copyedit": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#copyedit|Carga de novicio: correction de probas]]",
 	"tag-newcomer_task_copyedit-description": "Modification \"Correction de probas\" suggerite per le modulo de modificationes suggerite del pagina de initio pro novicios",
-	"tag-newcomer_task_references": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|Carga de novicio: referentias]]",
+	"tag-newcomer_task_references": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#references|Carga de novicio: referentias]]",
 	"tag-newcomer_task_references-description": "Modification \"Referentias\" suggerite per le modulo de modificationes suggerite del pagina de initio pro novicios",
-	"tag-newcomer_task_update": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|Carga de novicio: actualisation]]",
+	"tag-newcomer_task_update": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#update|Carga de novicio: actualisation]]",
 	"tag-newcomer_task_update-description": "Modification \"Actualisation\" suggerite per le modulo de modificationes suggerite del pagina de initio pro novicios",
-	"tag-newcomer_task_expand": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|Carga de novicio: expansion]]",
+	"tag-newcomer_task_expand": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#expand|Carga de novicio: expansion]]",
 	"tag-newcomer_task_expand-description": "Modification \"Expansion\" suggerite per le modulo de modificationes suggerite del pagina de initio pro novicios",
-	"tag-newcomer_task_links": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|Carga de novicio: ligamines]]",
+	"tag-newcomer_task_links": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#links|Carga de novicio: ligamines]]",
 	"tag-newcomer_task_links-description": "Modification \"Ligamines\" suggerite per le modulo de modificationes suggerite del pagina de initio pro novicios",
-	"tag-newcomer_task_add_link": "[[mw:Special:MyLanguage/Growth/Personalized first day/Structured tasks/Add a link|Suggerite: adder ligamines]]",
+	"tag-newcomer_task_add_link": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#s-link|Suggerite: adder ligamines]]",
 	"tag-newcomer_task_add_link-description": "Modification \"Adder ligamine\" suggerite per le modulo de modificationes suggerite del pagina de initio pro novicios",
-	"tag-newcomer_task_image_suggestion": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Structured_tasks/Add_an_image|Suggerite: adder imagines]]",
+	"tag-newcomer_task_image_suggestion": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#s-image|Suggerite: adder imagines]]",
 	"tag-newcomer_task_image_suggestion-description": "Modification \"Adder imagines\" suggerite per le modulo de modificationes suggerite del pagina de initio pro novicios",
 	"growthexperiments-homepage-help-dialog-title": "Poner question al servicio de adjuta",
 	"growthexperiments-homepage-help-header": "Obtener adjuta pro modificar",
