--- a/i18n/homepage/ka.json
+++ b/i18n/homepage/ka.json
@@ -111,21 +111,21 @@
 	"tag-mentorship_module_question-description": "რედაქტირება საწყისი გვერდის მენტორობის მოდულის ფუნქციის „ჰკითხეთ თქვენს მენტორს“ გამოყენებით",
 	"tag-mentorship_panel_question": "შეკითხვა მენტორობის პანელიდან",
 	"tag-mentorship_panel_question-description": "რედაქტირება განხორციელდა დახმარების პანელის ფუნქციით „ჰკითხეთ თქვენს მენტორს“",
-	"tag-newcomer_task": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|ახალბედას დავალება]]",
+	"tag-newcomer_task": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks|ახალბედას დავალება]]",
 	"tag-newcomer_task-description": "ახალბედას საწყისი გვერდის შემოთავაზებული ცვლილებების მოდულის მიერ შეთავაზებული რედაქტირება",
-	"tag-newcomer_task_copyedit": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|ახალბედას დავალება: კორექტურა]]",
+	"tag-newcomer_task_copyedit": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#copyedit|ახალბედას დავალება: კორექტურა]]",
 	"tag-newcomer_task_copyedit-description": "ახალბედას საწყისი გვერდის შემოთავაზებული ცვლილებების მოდულის მიერ შეთავაზებული დავალება „კორექტურა“",
-	"tag-newcomer_task_references": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|ახალბედას დავალება: სქოლიოები]]",
+	"tag-newcomer_task_references": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#references|ახალბედას დავალება: სქოლიოები]]",
 	"tag-newcomer_task_references-description": "ახალბედას საწყისი გვერდის შემოთავაზებული ცვლილებების მოდულის მიერ შეთავაზებული დავალება „სქოლიოები“",
-	"tag-newcomer_task_update": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|ახალბედას დავალება: განახლება]]",
+	"tag-newcomer_task_update": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#update|ახალბედას დავალება: განახლება]]",
 	"tag-newcomer_task_update-description": "ახალბედას საწყისი გვერდის შემოთავაზებული ცვლილებების მოდულის მიერ შეთავაზებული დავალება „განახლება“",
-	"tag-newcomer_task_expand": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|ახალბედას დავალება: გაფართოება]]",
+	"tag-newcomer_task_expand": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#expand|ახალბედას დავალება: გაფართოება]]",
 	"tag-newcomer_task_expand-description": "ახალბედას საწყისი გვერდის შემოთავაზებული ცვლილებების მოდულის მიერ შეთავაზებული დავალება „გაფართოება“",
-	"tag-newcomer_task_links": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|ახალბედას დავალება: ბმულები]]",
+	"tag-newcomer_task_links": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#links|ახალბედას დავალება: ბმულები]]",
 	"tag-newcomer_task_links-description": "ახალბედას საწყისი გვერდის შემოთავაზებული ცვლილებების მოდულის მიერ შეთავაზებული დავალება „ბმულები“",
-	"tag-newcomer_task_add_link": "[[mw:Special:MyLanguage/Growth/Personalized first day/Structured tasks/Add a link|შეთავაზებული: ბმულების დამატება]]",
+	"tag-newcomer_task_add_link": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#s-link|შეთავაზებული: ბმულების დამატება]]",
 	"tag-newcomer_task_add_link-description": "ახალბედას საწყისი გვერდის შემოთავაზებული ცვლილებების მოდულის მიერ შეთავაზებული დავალება „ბმულების დამატება“",
-	"tag-newcomer_task_image_suggestion": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Structured_tasks/Add_an_image|შეთავაზებული: სურათების დამატება]]",
+	"tag-newcomer_task_image_suggestion": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#s-image|შეთავაზებული: სურათების დამატება]]",
 	"tag-newcomer_task_image_suggestion-description": "ახალბედას საწყისი გვერდის შემოთავაზებული ცვლილებების მოდულის მიერ შეთავაზებული დავალება „სურათების დამატება“",
 	"growthexperiments-homepage-help-dialog-title": "იკითხეთ ფორუმზე",
 	"growthexperiments-homepage-help-header": "დახმარება რედაქტირებაში",
