--- a/i18n/homepage/lv.json
+++ b/i18n/homepage/lv.json
@@ -105,16 +105,16 @@
 	"tag-mentorship_module_question-description": "Labojums veikts no sākumlapas mentora moduļa \"Jautā savam mentoram\" iespējas",
 	"tag-mentorship_panel_question": "Mentoru paneļa jautājums",
 	"tag-mentorship_panel_question-description": "Labojums veikts no palīdzības paneļa \"Jautā savam mentoram\" iespējas",
-	"tag-newcomer_task": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|Jaunpienācēju uzdevums]]",
+	"tag-newcomer_task": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks|Jaunpienācēju uzdevums]]",
 	"tag-newcomer_task-description": "Labojumu ieteicis jaunpienācēju sākumlapas ieteikto labojumu modulis",
-	"tag-newcomer_task_copyedit": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|Jaunpienācēju uzdevums: teksta uzlabošana]]",
-	"tag-newcomer_task_references": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|Jaunpienācēju uzdevums: atsauces]]",
-	"tag-newcomer_task_update": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|Jaunpienācēju uzdevums: atjaunināšana]]",
-	"tag-newcomer_task_expand": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|Jaunpienācēju uzdevums: paplašināšana]]",
-	"tag-newcomer_task_links": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|Jaunpienācēju uzdevums: saites]]",
-	"tag-newcomer_task_add_link": "[[mw:Special:MyLanguage/Growth/Personalized first day/Structured tasks/Add a link|Ieteikums: pievieno saites]]",
+	"tag-newcomer_task_copyedit": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#copyedit|Jaunpienācēju uzdevums: teksta uzlabošana]]",
+	"tag-newcomer_task_references": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#references|Jaunpienācēju uzdevums: atsauces]]",
+	"tag-newcomer_task_update": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#update|Jaunpienācēju uzdevums: atjaunināšana]]",
+	"tag-newcomer_task_expand": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#expand|Jaunpienācēju uzdevums: paplašināšana]]",
+	"tag-newcomer_task_links": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#links|Jaunpienācēju uzdevums: saites]]",
+	"tag-newcomer_task_add_link": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#s-link|Ieteikums: pievieno saites]]",
 	"tag-newcomer_task_add_link-description": "\"Pievienot saiti\" labojumu ieteicis jaunpienācēju sākumlapas ieteikto labojumu modulis",
-	"tag-newcomer_task_image_suggestion": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Structured_tasks/Add_an_image|Ieteikums: pievieno attēlus]]",
+	"tag-newcomer_task_image_suggestion": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#s-image|Ieteikums: pievieno attēlus]]",
 	"growthexperiments-homepage-help-dialog-title": "Jautā palīdzības dienestā",
 	"growthexperiments-homepage-help-header": "Saņem palīdzību labošanā",
 	"growthexperiments-homepage-help-subheader": "Populārākās palīdzības lapas par labošanu",
