--- a/i18n/homepage/mk.json
+++ b/i18n/homepage/mk.json
@@ -59,7 +59,7 @@
 	"growthexperiments-tour-response-button-okay": "Јасно",
 	"tag-help_module_question": "Прашање на помошниот модул",
 	"tag-help_module_question-description": "Уредување направено од можноста за поставање прашања во помошниот модул на почетната страница",
-	"tag-newcomer_task_expand": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|Новодојденска задача: проширување]]",
+	"tag-newcomer_task_expand": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#expand|Новодојденска задача: проширување]]",
 	"growthexperiments-homepage-help-header": "Најдете или побарајте помош",
 	"growthexperiments-homepage-help-subheader": "Најчитани помошни статии",
 	"growthexperiments-homepage-recent-questions-posted-on": "Објавено пред $1",
