--- a/i18n/homepage/my.json
+++ b/i18n/homepage/my.json
@@ -80,7 +80,7 @@
 	"growthexperiments-homepage-impact-unactivated-subheader-text": "သိရသမျှ ၀ တည်းဖြတ်မှုများ",
 	"growthexperiments-homepage-impact-unactivated-suggested-edits-link": "အကြံပြုထားသော ပြင်ဆင်မှုများကို ကြည့်ရန်",
 	"growthexperiments-tour-response-button-okay": "သဘောပေါက်ပြီ",
-	"tag-newcomer_task": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|လူသစ် လုပ်ငန်းဆောင်တာ]]",
+	"tag-newcomer_task": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks|လူသစ် လုပ်ငန်းဆောင်တာ]]",
 	"growthexperiments-homepage-help-dialog-title": "အကူညီစားပွဲဝိုင်းတွင် မေးမြန်းရန်",
 	"growthexperiments-homepage-help-header": "တည်းဖြတ်မှုနှင့်ပတ်သက်၍ အကူညီရယူပါ",
 	"growthexperiments-homepage-help-subheader": "တည်းဖြတ်ခြင်းဆိုင်ရာ ထိပ်ဆုံးအကူညီစာမျက်နှာများ",
