--- a/i18n/homepage/nb.json
+++ b/i18n/homepage/nb.json
@@ -119,21 +119,21 @@
 	"tag-mentorship_module_question-description": "Redigering gjort fra funksjonen for å stille fadderen spørsmål fra hjemmesidens hjelpemodul",
 	"tag-mentorship_panel_question": "Fadderpanelspørsmål",
 	"tag-mentorship_panel_question-description": "Redigering gjort med hjelpepanelets funksjon for å spørre fadderen sin",
-	"tag-newcomer_task": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|Oppgave for nybegynnere]]",
+	"tag-newcomer_task": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks|Oppgave for nybegynnere]]",
 	"tag-newcomer_task-description": "Redigering foreslått av modul på nybegynnerhjemmesiden",
-	"tag-newcomer_task_copyedit": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|Oppgave for nybegynnere: korrekturlesing]]",
+	"tag-newcomer_task_copyedit": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#copyedit|Oppgave for nybegynnere: korrekturlesing]]",
 	"tag-newcomer_task_copyedit-description": "«Korrekturlesing»-oppgave foreslått av modulen for foreslåtte redigeringer på nybegynnerhjemmesiden",
-	"tag-newcomer_task_references": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|Oppgave for nybegynnere: referanser]]",
+	"tag-newcomer_task_references": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#references|Oppgave for nybegynnere: referanser]]",
 	"tag-newcomer_task_references-description": "«Referanser»-oppgave foreslått av modulen for foreslåtte redigeringer på nybegynnerhjemmesiden",
-	"tag-newcomer_task_update": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|Oppgave for nybegynnere: oppdatering]]",
+	"tag-newcomer_task_update": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#update|Oppgave for nybegynnere: oppdatering]]",
 	"tag-newcomer_task_update-description": "«Oppdatering»-oppgave foreslått av modulen for foreslåtte redigeringer på nybegynnerhjemmesiden",
-	"tag-newcomer_task_expand": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|Oppgave for nybegynnere: utvidelse]]",
+	"tag-newcomer_task_expand": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#expand|Oppgave for nybegynnere: utvidelse]]",
 	"tag-newcomer_task_expand-description": "«Utvidelse»-oppgave foreslått av modulen for foreslåtte redigeringer på nybegynnerhjemmesiden",
-	"tag-newcomer_task_links": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|Oppgave for nybegynnere: lenker]]",
+	"tag-newcomer_task_links": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#links|Oppgave for nybegynnere: lenker]]",
 	"tag-newcomer_task_links-description": "«Lenker»-oppgave foreslått av modulen for foreslåtte redigeringer på nybegynnerhjemmesiden",
-	"tag-newcomer_task_add_link": "[[mw:Special:MyLanguage/Growth/Personalized first day/Structured tasks/Add a link|Foreslått: legg til lenker]]",
+	"tag-newcomer_task_add_link": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#s-link|Foreslått: legg til lenker]]",
 	"tag-newcomer_task_add_link-description": "«Legg til lenke»-redigering foreslått av nybegynnerhjemmesidens modul for foreslåtte redigeringer",
-	"tag-newcomer_task_image_suggestion": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Structured_tasks/Add_an_image|Foreslått: legg til bilder]]",
+	"tag-newcomer_task_image_suggestion": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#s-image|Foreslått: legg til bilder]]",
 	"tag-newcomer_task_image_suggestion-description": "«Legg til bilder»-redigering foreslått av modulen for foreslåtte endringer på nybegynnerhjemmesiden",
 	"growthexperiments-homepage-help-dialog-title": "Spør nybegynnerforumet",
 	"growthexperiments-homepage-help-header": "Få hjelp med redigering",
