--- a/i18n/homepage/nqo.json
+++ b/i18n/homepage/nqo.json
@@ -106,10 +106,10 @@
 	"tag-mentorship_module_question-description": "ߡߊ߬ߦߟߍ߬ߡߊ߲߬ߠߌ߲ ߡߍ߲ ߞߍߣߍ߲߫ ߦߋ߫ ߓߏ߬ߟߏ߲߬ߘߊ ߞߐߜߍ ߡߞߊ߬ߙߊ߲߬ߘߊ ߞߙߊߞߏ ߟߎ߫ «ߌ ߟߊ߫ ߡߞߊ߬ߙߊ߲߬ߓߊ߮ ߢߌ߬ߣߌ߲߬ߞߊ߫» ߗߋߘߊ ߟߊ߫",
 	"tag-mentorship_panel_question": "ߡߞߊ߬ߙߊ߲߬ߘߊ߮ ߦߌ߬ߘߊ߬ߥߟߊ ߢߌ߬ߣߌ߲߬ߞߊ߬ߟߌ",
 	"tag-mentorship_panel_question-description": "ߡߊ߬ߦߟߍ߬ߡߊ߲߬ߠߌ߲ ߡߍ߲ ߠߎ߬ ߛߌ߲ߘߌߣߍ߲߫ ߦߋ߫ ߘߍ߬ߡߍ߲߬ߠߌ߲ ߦߌ߬ߘߊ߬ߥߟߊ «ߡߞߊ߬ߙߊ߲߬ߓߊ߮ ߡߊߢߌ߬ߣߌ߲߬ߞߊ» ߗߋߘߊ ߟߊ߫",
-	"tag-newcomer_task": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|ߣߊ߬ߓߊ߰ߕߐ߬ ߞߎߘߊ ߟߎ߬ ߟߊ߫ ߘߊߞߎ߲]]",
+	"tag-newcomer_task": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks|ߣߊ߬ߓߊ߰ߕߐ߬ ߞߎߘߊ ߟߎ߬ ߟߊ߫ ߘߊߞߎ߲]]",
 	"tag-newcomer_task-description": "ߞߎ߲߬ߦߌ߬ߘߊ߬ߣߍ߲ ߡߊߦߟߍ߬ߡߊ߲߫ ߞߎ߲߬ߦߌ߬ߘߊ߬ߣߍ߲ ߠߎ߬ ߡߊߦߟߍ߬ߡߊ߲߬ߠߌ߲ ߞߙߊߞߏ ߟߊ߫ ߣߊ߬ߓߊ߰ߕߐ߫ ߞߎߘߊ ߟߎ߬ ߟߊ߫ ߓߏ߬ߟߏ߲߬ߘߊ ߞߐߜߍ ߟߊ߫",
-	"tag-newcomer_task_copyedit": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|ߣߊ߬ߓߊ߰ߕߐ߬ ߞߎߘߊ ߟߎ߬ ߟߊ߫ ߘߊߞߎ߲: ߓߊߞߎߘߊ ߡߊߦߟߍ߬ߡߊ߲߫]]",
-	"tag-newcomer_task_add_link": "[[mw:Special:MyLanguage/Growth/Personalized first day/Structured tasks/Add a link|ߞߎ߲߬ߦߌ߬ߘߊ߬ߣߍ߲:ߛߘߌ߬ߜߋ߲ ߝߊ߬ߙߊ߫]]",
+	"tag-newcomer_task_copyedit": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#copyedit|ߣߊ߬ߓߊ߰ߕߐ߬ ߞߎߘߊ ߟߎ߬ ߟߊ߫ ߘߊߞߎ߲: ߓߊߞߎߘߊ ߡߊߦߟߍ߬ߡߊ߲߫]]",
+	"tag-newcomer_task_add_link": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#s-link|ߞߎ߲߬ߦߌ߬ߘߊ߬ߣߍ߲:ߛߘߌ߬ߜߋ߲ ߝߊ߬ߙߊ߫]]",
 	"growthexperiments-homepage-help-dialog-title": "ߢߌ߬ߣߌ߲߬ߞߊ߬ߟߌ ߞߍ߫ ߘߍ߬ߡߍ߲߬ߠߌ߲߫ ߢߊߓߐ߫ ߞߣߍ ߞߊ߲߬",
 	"growthexperiments-homepage-help-header": "ߘߍ߬ߡߍ߲߬ߠߌ߲ ߞߍ߫ ߡߊ߬ߦߟߍ߬ߡߊ߲߬ߠߌ߲ ߠߊ߫",
 	"growthexperiments-homepage-help-subheader": "ߡߊ߬ߦߟߍ߬ߡߊ߲߬ߠߌ߲ ߘߍ߬ߡߍ߲߬ߠߌ߲߫ ߘߐߜߍ߫ ߢߣߊ",
