--- a/i18n/homepage/sd.json
+++ b/i18n/homepage/sd.json
@@ -40,10 +40,10 @@
 	"tag-help_module_question-description": "مک صفحو مدد ماڊيول جي \"ڪو سوال پڇو\" خصوصيت تان ڪيل سنوار",
 	"tag-mentorship_module_question-description": "مک صفحو مينٽورشپ ماڊيول جي \"ڪو سوال پڇو\" خصوصيت تان ڪيل سنوار",
 	"tag-mentorship_panel_question-description": "مدد پينل جي \"پنھنجي مينٽور کان پڇو\" خصوصيت تان ڪيل سنوار",
-	"tag-newcomer_task": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|نون-ايندڙن جا ڪم]]",
-	"tag-newcomer_task_copyedit": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|نون-ايندڙن جو ڪم: رواجي سنوار]]",
+	"tag-newcomer_task": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks|نون-ايندڙن جا ڪم]]",
+	"tag-newcomer_task_copyedit": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#copyedit|نون-ايندڙن جو ڪم: رواجي سنوار]]",
 	"tag-newcomer_task_copyedit-description": "\"رواجي سنوار\" نون-ايندڙن جي مک صفحي جي ڏسيل سنوارن جي ماڊيول پاران ڏسيل سنوار جو ڪم",
-	"tag-newcomer_task_add_link": "[[mw:Special:MyLanguage/Growth/Personalized first day/Structured tasks/Add a link|ڏسيل: ڳنڍڻا ڏيو]]",
+	"tag-newcomer_task_add_link": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#s-link|ڏسيل: ڳنڍڻا ڏيو]]",
 	"growthexperiments-homepage-help-dialog-title": "مدد ڊيسڪ کان پڇو",
 	"growthexperiments-homepage-help-header": "سنوارڻ ۾ مدد وٺو",
 	"growthexperiments-homepage-help-subheader": "سنوارڻ ۾ مدد بابت مک صفحا",
