--- a/i18n/homepage/sr-el.json
+++ b/i18n/homepage/sr-el.json
@@ -99,9 +99,9 @@
 	"tag-mentorship_module_question-description": "Izmene objavljene funkcijom postavljanja pitanja mentoru iz mentorskog modula na početnoj stranici",
 	"tag-mentorship_panel_question": "pitanje s mentorske table",
 	"tag-mentorship_panel_question-description": "Izmene objavljene funkcijom postavljanja pitanja mentoru s table pomoći",
-	"tag-newcomer_task": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|zadatak za novajliju]]",
+	"tag-newcomer_task": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks|zadatak za novajliju]]",
 	"tag-newcomer_task-description": "Izmene predložene modulom za predložene izmene na početnoj stranici novajlija",
-	"tag-newcomer_task_add_link": "[[mw:Special:MyLanguage/Growth/Personalized first day/Structured tasks/Add a link|predložene izmene: dodavanje veza]]",
+	"tag-newcomer_task_add_link": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#s-link|predložene izmene: dodavanje veza]]",
 	"growthexperiments-homepage-help-dialog-title": "Postavljanje pitanja",
 	"growthexperiments-homepage-help-header": "Traženje pomoći",
 	"growthexperiments-homepage-help-subheader": "Istaknute stranice pomoći",
