--- a/i18n/homepage/sv.json
+++ b/i18n/homepage/sv.json
@@ -109,21 +109,21 @@
 	"tag-mentorship_module_question-description": "Redigering gjord från funktionen \"Fråga din fadder\" i hemsidans fadderskapsmodul",
 	"tag-mentorship_panel_question": "Fadderskapspanelfråga",
 	"tag-mentorship_panel_question-description": "Redigering gjord från funktionen \"Fråga din fadder\" i hjälppanelen.",
-	"tag-newcomer_task": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|Nybörjaruppgift]]",
+	"tag-newcomer_task": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks|Nybörjaruppgift]]",
 	"tag-newcomer_task-description": "Redigering föreslagen av redigeringsförslagsmodulen på nybörjarhemsidan",
-	"tag-newcomer_task_copyedit": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|Nybörjaruppgift: korrekturläsa]]",
+	"tag-newcomer_task_copyedit": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#copyedit|Nybörjaruppgift: korrekturläsa]]",
 	"tag-newcomer_task_copyedit-description": "\"Korrekturläsning\"-uppgift som föreslagits av modulen för föreslagna uppgifter på nybörjarsidan.",
-	"tag-newcomer_task_references": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|Nybörjaruppgift: källor]]",
+	"tag-newcomer_task_references": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#references|Nybörjaruppgift: källor]]",
 	"tag-newcomer_task_references-description": "\"Referenser\"-uppgift som föreslagits av modulen för föreslagna uppgifter på nybörjarsidan.",
-	"tag-newcomer_task_update": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|Nybörjaruppgift: uppdatera]]",
+	"tag-newcomer_task_update": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#update|Nybörjaruppgift: uppdatera]]",
 	"tag-newcomer_task_update-description": "\"Uppdatera\"-uppgift som föreslagits av modulen för föreslagna uppgifter på nybörjarsidan.",
-	"tag-newcomer_task_expand": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|Nybörjaruppgift: utöka]]",
+	"tag-newcomer_task_expand": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#expand|Nybörjaruppgift: utöka]]",
 	"tag-newcomer_task_expand-description": "\"Expandera\"-uppgift som föreslagits av modulen för föreslagna uppgifter på nybörjarsidan.",
-	"tag-newcomer_task_links": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|Nybörjaruppgift: länkar]]",
+	"tag-newcomer_task_links": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#links|Nybörjaruppgift: länkar]]",
 	"tag-newcomer_task_links-description": "\"Länkar\"-uppgift som föreslagits av modulen för föreslagna uppgifter på nybörjarsidan.",
-	"tag-newcomer_task_add_link": "[[mw:Special:MyLanguage/Growth/Personalized first day/Structured tasks/Add a link|Förslag: lägg till länkar]]",
+	"tag-newcomer_task_add_link": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#s-link|Förslag: lägg till länkar]]",
 	"tag-newcomer_task_add_link-description": "\"Lägg till länk\"-redigering föreslagen av föreslagna redigeringar-modulen på nybörjarhemsidan",
-	"tag-newcomer_task_image_suggestion": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Structured_tasks/Add_an_image|Förslag: infoga bilder]]",
+	"tag-newcomer_task_image_suggestion": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#s-image|Förslag: infoga bilder]]",
 	"tag-newcomer_task_image_suggestion-description": "\"Lägga till bilder\"-uppgiftsredigering föreslogs av förslagsredigeringsmodulen på nybörjarhemsidan",
 	"growthexperiments-homepage-help-dialog-title": "Fråga hjälpcentralen",
 	"growthexperiments-homepage-help-header": "Få hjälp med att redigera",
