--- a/i18n/homepage/tr.json
+++ b/i18n/homepage/tr.json
@@ -145,21 +145,21 @@
 	"tag-mentorship_module_question-description": "Anasayfa danışmanlık modülünün \"Danışmanınıza sorun\" özelliğinden yapılan düzenleme",
 	"tag-mentorship_panel_question": "Danışmanlık paneli sorusu",
 	"tag-mentorship_panel_question-description": "Yardım panelinin \"Danışmanınıza sorun\" özelliğinden yapılan düzenleme",
-	"tag-newcomer_task": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|Yeni gelen görev]]",
+	"tag-newcomer_task": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks|Yeni gelen görev]]",
 	"tag-newcomer_task-description": "Yeni gelen ana sayfanın önerilen değiştirme modülü tarafından önerilen değişiklik",
-	"tag-newcomer_task_copyedit": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|Yenigelen görevi: copyedit]]",
+	"tag-newcomer_task_copyedit": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#copyedit|Yenigelen görevi: copyedit]]",
 	"tag-newcomer_task_copyedit-description": "Yeni gelen ana sayfasının önerilen düzenlemeler modülü tarafından önerilen \"Tashih\" görev düzenlemesi",
-	"tag-newcomer_task_references": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|Yeni gelen görevi: kaynaklar]]",
+	"tag-newcomer_task_references": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#references|Yeni gelen görevi: kaynaklar]]",
 	"tag-newcomer_task_references-description": "Yeni gelen ana sayfasının önerilen düzenlemeler modülü tarafından önerilen \"Kaynaklar\" görev düzenlemesi",
-	"tag-newcomer_task_update": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|Yeni gelen görevi: güncelleme]]",
+	"tag-newcomer_task_update": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#update|Yeni gelen görevi: güncelleme]]",
 	"tag-newcomer_task_update-description": "Yeni gelen ana sayfasının önerilen düzenlemeler modülü tarafından önerilen \"Güncelleme\" görev düzenlemesi",
-	"tag-newcomer_task_expand": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|Yeni gelen görevi: genişletme]]",
+	"tag-newcomer_task_expand": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#expand|Yeni gelen görevi: genişletme]]",
 	"tag-newcomer_task_expand-description": "Yeni gelen ana sayfasının önerilen düzenlemeler modülü tarafından önerilen \"Genişletme\" görev düzenlemesi",
-	"tag-newcomer_task_links": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|Yeni gelen görevi: bağlantılar]]",
+	"tag-newcomer_task_links": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#links|Yeni gelen görevi: bağlantılar]]",
 	"tag-newcomer_task_links-description": "Yeni gelen ana sayfasının önerilen düzenlemeler modülü tarafından önerilen \"Bağlantılar\" görev düzenlemesi",
-	"tag-newcomer_task_add_link": "[[mw:Special:MyLanguage/Growth/Personalized first day/Structured tasks/Add a link|Önerilen: bağlantı ekleyin]]",
+	"tag-newcomer_task_add_link": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#s-link|Önerilen: bağlantı ekleyin]]",
 	"tag-newcomer_task_add_link-description": "Yeni gelen ana sayfasının önerilen düzenlemeler modülü tarafından önerilen \"Bağlantı ekle\" görev düzenlemesi",
-	"tag-newcomer_task_image_suggestion": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Structured_tasks/Add_an_image|Yeni gelen görevi: görsel ekleme]]",
+	"tag-newcomer_task_image_suggestion": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#s-image|Yeni gelen görevi: görsel ekleme]]",
 	"tag-newcomer_task_image_suggestion-description": "Yeni gelen ana sayfasının önerilen düzenlemeler modülü tarafından önerilen \"Görsel ekleme\" görev düzenlemesi",
 	"growthexperiments-homepage-help-dialog-title": "Danışma masasına sorun",
 	"growthexperiments-homepage-help-header": "Düzenleme ile ilgili yardım alın",
