--- a/i18n/homepage/uk.json
+++ b/i18n/homepage/uk.json
@@ -134,21 +134,21 @@
 	"tag-mentorship_module_question-description": "Редагування зроблене через функцію «Поставте запитання наставнику» модуля наставництва домашньої сторінки",
 	"tag-mentorship_panel_question": "Запитання панелі наставництва",
 	"tag-mentorship_panel_question-description": "Редагування здійснене з функції «Запитайте свого наставника» на довідковій панелі",
-	"tag-newcomer_task": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|Завдання новачку]]",
+	"tag-newcomer_task": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks|Завдання новачку]]",
 	"tag-newcomer_task-description": "Редагування, запропоноване модулем пропонованих редагувань домашньої сторінки новачка",
-	"tag-newcomer_task_copyedit": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|Завдання новачку: коректура]]",
+	"tag-newcomer_task_copyedit": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#copyedit|Завдання новачку: коректура]]",
 	"tag-newcomer_task_copyedit-description": "Редагування «Коректура», запропоноване модулем запропонованих редагувань домашньої сторінки новачка",
-	"tag-newcomer_task_references": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|Завдання новачку: примітки]]",
+	"tag-newcomer_task_references": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#references|Завдання новачку: примітки]]",
 	"tag-newcomer_task_references-description": "Редагування «Примітки», запропоноване модулем запропонованих редагувань домашньої сторінки новачка",
-	"tag-newcomer_task_update": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|Завдання новачку: оновлення]]",
+	"tag-newcomer_task_update": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#update|Завдання новачку: оновлення]]",
 	"tag-newcomer_task_update-description": "Редагування «Оновлення», запропоноване модулем запропонованих редагувань домашньої сторінки новачка",
-	"tag-newcomer_task_expand": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|Завдання новачку: доповнення]]",
+	"tag-newcomer_task_expand": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#expand|Завдання новачку: доповнення]]",
 	"tag-newcomer_task_expand-description": "Редагування «Доповнення», запропоноване модулем запропонованих редагувань домашньої сторінки новачка",
-	"tag-newcomer_task_links": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|Завдання новачку: посилання]]",
+	"tag-newcomer_task_links": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#links|Завдання новачку: посилання]]",
 	"tag-newcomer_task_links-description": "Редагування «Посилання», запропоноване модулем запропонованих редагувань домашньої сторінки новачка",
-	"tag-newcomer_task_add_link": "[[mw:Special:MyLanguage/Growth/Personalized first day/Structured tasks/Add a link|Запропоноване: додати посилання]]",
+	"tag-newcomer_task_add_link": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#s-link|Запропоноване: додати посилання]]",
 	"tag-newcomer_task_add_link-description": "Редагування «Додати посилання», запропоноване модулем пропонованих редагувань домашньої сторінки новачка",
-	"tag-newcomer_task_image_suggestion": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Structured_tasks/Add_an_image|Рекомендовано: додати зображення]]",
+	"tag-newcomer_task_image_suggestion": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#s-image|Рекомендовано: додати зображення]]",
 	"tag-newcomer_task_image_suggestion-description": "Редагування «Додати зображення», запропоноване модулем запропонованих редагувань домашньої сторінки новачка",
 	"growthexperiments-homepage-help-dialog-title": "Поставте запитання",
 	"growthexperiments-homepage-help-header": "Отримайте допомогу з редагуванням",
