--- a/i18n/homepage/vi.json
+++ b/i18n/homepage/vi.json
@@ -105,9 +105,9 @@
 	"tag-mentorship_module_question-description": "Sửa đổi được thực hiện từ tính năng “Đặt một câu hỏi” của mô-đun cố vấn trang chủ",
 	"tag-mentorship_panel_question": "Câu hỏi cố vấn",
 	"tag-mentorship_panel_question-description": "Sửa đổi tạo ra từ tính năng “Hỏi cố vấn của bạn” tại bảng trợ giúp",
-	"tag-newcomer_task": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|Nhiệm vụ người mới]]",
+	"tag-newcomer_task": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks|Nhiệm vụ người mới]]",
 	"tag-newcomer_task-description": "Sửa đổi được gợi ý bởi mô-đun sửa đổi gợi ý tại trang nhà người mới",
-	"tag-newcomer_task_add_link": "[[mw:Special:MyLanguage/Growth/Personalized first day/Structured tasks/Add a link|Gợi ý: thêm liên kết]]",
+	"tag-newcomer_task_add_link": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#s-link|Gợi ý: thêm liên kết]]",
 	"tag-newcomer_task_add_link-description": "Nhiệm vụ sửa đổi “thêm liên kết” được gợi ý bởi mô-đun sửa đổi gợi ý tại trang nhà người mới",
 	"growthexperiments-homepage-help-dialog-title": "Hỏi ở bàn giúp đỡ",
 	"growthexperiments-homepage-help-header": "Yêu cầu trợ giúp sửa đổi",
