--- a/i18n/homepage/cs.json
+++ b/i18n/homepage/cs.json
@@ -137,21 +137,21 @@
 	"tag-mentorship_module_question-description": "Editace uložená pomocí mentorské funkce Domovské stránky.",
 	"tag-mentorship_panel_question": "otázka z panelu Potřebuji pomoc",
 	"tag-mentorship_panel_question-description": "Otázka uložená z funkce „Zeptat se svého mentora“ panelu Potřebuji pomoc",
-	"tag-newcomer_task": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|Editační tipy]]",
+	"tag-newcomer_task": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks|Editační tipy]]",
 	"tag-newcomer_task-description": "Editace navržená Domovskou stránkou nováčka",
-	"tag-newcomer_task_copyedit": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|Editační tipy: korektury]]",
+	"tag-newcomer_task_copyedit": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#copyedit|Editační tipy: korektury]]",
 	"tag-newcomer_task_copyedit-description": "Korektura článku uložené pomocí modulu Editační tipy z Domovské stránky nováčka",
-	"tag-newcomer_task_references": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|Editační tipy: reference]]",
+	"tag-newcomer_task_references": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#references|Editační tipy: reference]]",
 	"tag-newcomer_task_references-description": "Přidání referencí uložené pomocí modulu Editační tipy z Domovské stránky nováčka",
-	"tag-newcomer_task_update": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|Editační tipy: aktualizace článku]]",
+	"tag-newcomer_task_update": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#update|Editační tipy: aktualizace článku]]",
 	"tag-newcomer_task_update-description": "Aktualizace článku uložené pomocí modulu Editační tipy z Domovské stránky nováčka",
-	"tag-newcomer_task_expand": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|Editační tipy: rozšíření článku]]",
+	"tag-newcomer_task_expand": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#expand|Editační tipy: rozšíření článku]]",
 	"tag-newcomer_task_expand-description": "Rozšíření článku uložené pomocí modulu Editační tipy z Domovské stránky nováčka",
-	"tag-newcomer_task_links": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|Editační tipy: přidání odkazů]]",
+	"tag-newcomer_task_links": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#links|Editační tipy: přidání odkazů]]",
 	"tag-newcomer_task_links-description": "Odkazy přidané pomocí editačních tipů z Domovské stránky nováčka",
-	"tag-newcomer_task_add_link": "[[mw:Special:MyLanguage/Growth/Personalized first day/Structured tasks/Add a link|Doporučeno: Přidaný odkaz]]",
+	"tag-newcomer_task_add_link": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#s-link|Doporučeno: Přidaný odkaz]]",
 	"tag-newcomer_task_add_link-description": "Odkaz přidaný pomocí editačních tipů z Domovské stránky nováčka",
-	"tag-newcomer_task_image_suggestion": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Structured_tasks/Add_an_image|Doporučeno: Přidaný obrázek]]",
+	"tag-newcomer_task_image_suggestion": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#s-image|Doporučeno: Přidaný obrázek]]",
 	"tag-newcomer_task_image_suggestion-description": "Obrázek přidaný pomocí editačních tipů Domovské stránky nováčka.",
 	"growthexperiments-homepage-help-dialog-title": "Položit otázku",
 	"growthexperiments-homepage-help-header": "Získejte pomoc s editací",
