--- a/i18n/homepage/et.json
+++ b/i18n/homepage/et.json
@@ -84,21 +84,21 @@
 	"tag-mentorship_module_question-description": "Muudatus, mis tehti kodulehe mentorluse moodulis funktsiooniga \"Küsi mentorilt\"",
 	"tag-mentorship_panel_question": "Mentorluse paneeli küsimus",
 	"tag-mentorship_panel_question-description": "Muudatus, mis tehti abipaneelis funktsiooniga \"Küsi mentorilt\"",
-	"tag-newcomer_task": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|Uue kasutaja ülesanne]]",
+	"tag-newcomer_task": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks|Uue kasutaja ülesanne]]",
 	"tag-newcomer_task-description": "Muudatus, mida soovitas uue kasutaja kodulehel soovitatud muudatuste moodul",
-	"tag-newcomer_task_copyedit": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|Uue kasutaja ülesanne: keeletoimetamine]]",
+	"tag-newcomer_task_copyedit": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#copyedit|Uue kasutaja ülesanne: keeletoimetamine]]",
 	"tag-newcomer_task_copyedit-description": "Keeletoimetamise ülesande muudatus, mida soovitas uue kasutaja kodulehel soovitatud muudatuste moodul",
-	"tag-newcomer_task_references": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|Uue kasutaja ülesanne: viited]]",
+	"tag-newcomer_task_references": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#references|Uue kasutaja ülesanne: viited]]",
 	"tag-newcomer_task_references-description": "Viidete lisamise ülesande muudatus, mida soovitas uue kasutaja kodulehel soovitatud muudatuste moodul",
-	"tag-newcomer_task_update": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|Uue kasutaja ülesanne: uuendamine]]",
+	"tag-newcomer_task_update": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#update|Uue kasutaja ülesanne: uuendamine]]",
 	"tag-newcomer_task_update-description": "Uuendamise ülesande muudatus, mida soovitas uue kasutaja kodulehel soovitatud muudatuste moodul",
-	"tag-newcomer_task_expand": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|Uue kasutaja ülesanne: täiendamine]]",
+	"tag-newcomer_task_expand": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#expand|Uue kasutaja ülesanne: täiendamine]]",
 	"tag-newcomer_task_expand-description": "Täiendamise ülesande muudatus, mida soovitas uue kasutaja kodulehel soovitatud muudatuste moodul",
-	"tag-newcomer_task_links": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|Uue kasutaja ülesanne: lingid]]",
+	"tag-newcomer_task_links": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#links|Uue kasutaja ülesanne: lingid]]",
 	"tag-newcomer_task_links-description": "Linkide lisamise ülesande muudatus, mida soovitas uue kasutaja kodulehel soovitatud muudatuste moodul",
-	"tag-newcomer_task_add_link": "[[mw:Special:MyLanguage/Growth/Personalized first day/Structured tasks/Add a link|Soovitatud: lisa linke]]",
+	"tag-newcomer_task_add_link": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#s-link|Soovitatud: lisa linke]]",
 	"tag-newcomer_task_add_link-description": "Linkide lisamise ülesande muudatus, mida soovitas uue kasutaja kodulehel soovitatud muudatuste moodul",
-	"tag-newcomer_task_image_suggestion": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Structured_tasks/Add_an_image|Soovitatud: lisa pilte]]",
+	"tag-newcomer_task_image_suggestion": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#s-image|Soovitatud: lisa pilte]]",
 	"tag-newcomer_task_image_suggestion-description": "Piltide lisamise ülesande muudatus, mida soovitas uue kasutaja kodulehel soovitatud muudatuste moodul",
 	"growthexperiments-homepage-help-header": "Leia abi seoses muutmisega",
 	"growthexperiments-homepage-help-subheader": "Tähtsamad abilehed muutmise kohta",
