--- a/i18n/homepage/fa.json
+++ b/i18n/homepage/fa.json
@@ -126,21 +126,21 @@
 	"tag-mentorship_module_question-description": "ویرایش انجام‌شده با ویژگی «از مربی خود بپرسید» در صفحهٔ اصلی پودمان مربی",
 	"tag-mentorship_panel_question": "پرسش پنل مربی",
 	"tag-mentorship_panel_question-description": "ویرایش انجام‌شده با ویژگی «از مربی خود بپرسید» در پنل کمک",
-	"tag-newcomer_task": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|وظیفه تازه‌وارد]]",
+	"tag-newcomer_task": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks|وظیفه تازه‌وارد]]",
 	"tag-newcomer_task-description": "ویرایش‌هایی که از طریق پودمان ویرایش‌های پیشنهادی در صفحهٔ اصلی کاربران تازه‌وارد انجام شده‌اند",
-	"tag-newcomer_task_copyedit": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|وظیفه تازه‌وارد: ویرایستاری]]",
+	"tag-newcomer_task_copyedit": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#copyedit|وظیفه تازه‌وارد: ویرایستاری]]",
 	"tag-newcomer_task_copyedit-description": "وظیفهٔ «ویرایستاری» پیشنهادی توسط پودمان ویرایش‌های پیشنهادی در صفحهٔ اصلی تازه‌واردان",
-	"tag-newcomer_task_references": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|وظیفه تازه‌وارد: منبع‌دهی]]",
+	"tag-newcomer_task_references": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#references|وظیفه تازه‌وارد: منبع‌دهی]]",
 	"tag-newcomer_task_references-description": "وظیفهٔ «منبع‌دهی» پیشنهادی توسط پودمان ویرایش‌های پیشنهادی در صفحهٔ اصلی تازه‌واردان",
-	"tag-newcomer_task_update": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|وظیفه تازه‌وارد: به‌روزرسانی]]",
+	"tag-newcomer_task_update": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#update|وظیفه تازه‌وارد: به‌روزرسانی]]",
 	"tag-newcomer_task_update-description": "وظیفهٔ «به‌روزرسانی» پیشنهادی توسط پودمان ویرایش‌های پیشنهادی در صفحهٔ اصلی تازه‌واردان",
-	"tag-newcomer_task_expand": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|وظیفه تازه‌وارد: گسترش]]",
+	"tag-newcomer_task_expand": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#expand|وظیفه تازه‌وارد: گسترش]]",
 	"tag-newcomer_task_expand-description": "وظیفهٔ «گسترش» پیشنهادی توسط پودمان ویرایش‌های پیشنهادی در صفحهٔ اصلی تازه‌واردان",
-	"tag-newcomer_task_links": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|وظیفه تازه‌وارد: پیونددهی]]",
+	"tag-newcomer_task_links": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#links|وظیفه تازه‌وارد: پیونددهی]]",
 	"tag-newcomer_task_links-description": "وظیفهٔ «پیونددهی» پیشنهادی توسط پودمان ویرایش‌های پیشنهادی در صفحهٔ اصلی تازه‌واردان",
-	"tag-newcomer_task_add_link": "[[mw:Special:MyLanguage/Growth/Personalized first day/Structured tasks/Add a link|پیشنهادی: افزودن پیوند]]",
+	"tag-newcomer_task_add_link": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#s-link|پیشنهادی: افزودن پیوند]]",
 	"tag-newcomer_task_add_link-description": "ویرایش وظیفهٔ «افزودن پیوند» پیشنهاد شده از سوی پودمان ویرایش‌های پیشنهادی در صفحهٔ اصلی کاربران تازه‌وارد",
-	"tag-newcomer_task_image_suggestion": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Structured_tasks/Add_an_image|پیشنهادی: افزودن تصویر]]",
+	"tag-newcomer_task_image_suggestion": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#s-image|پیشنهادی: افزودن تصویر]]",
 	"tag-newcomer_task_image_suggestion-description": "ویرایش وظیفهٔ «افزودن تصویر» پیشنهاد شده از سوی پودمان ویرایش‌های پیشنهادی در صفحهٔ اصلی کاربران تازه‌وارد",
 	"growthexperiments-homepage-help-dialog-title": "پرسش در میز کمک",
 	"growthexperiments-homepage-help-header": "گرفتن کمک برای ویرایش",
