--- a/i18n/homepage/hr.json
+++ b/i18n/homepage/hr.json
@@ -105,14 +105,14 @@
 	"tag-mentorship_module_question-description": "»Upitaj mentora« s početne stranice novaka",
 	"tag-mentorship_panel_question": "upitaj mentora:P",
 	"tag-mentorship_panel_question-description": "»Upitaj mentora« iz Pomoćnika za novake",
-	"tag-newcomer_task": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|Zadatak za novake]]",
+	"tag-newcomer_task": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks|Zadatak za novake]]",
 	"tag-newcomer_task-description": "Na poticaj modula za prijedloge novaku",
-	"tag-newcomer_task_copyedit": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|Novaci: korektura]]",
-	"tag-newcomer_task_references": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|Novaci: dodaj izvore]]",
-	"tag-newcomer_task_update": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|Novaci: obnovi informacije]]",
-	"tag-newcomer_task_expand": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|Novaci: proširi članak]]",
-	"tag-newcomer_task_links": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|Novaci: dodaj poveznice]]",
-	"tag-newcomer_task_add_link": "[[mw:Special:MyLanguage/Growth/Personalized first day/Structured tasks/Add a link|Preporučeno: dodavanje poveznica]]",
+	"tag-newcomer_task_copyedit": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#copyedit|Novaci: korektura]]",
+	"tag-newcomer_task_references": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#references|Novaci: dodaj izvore]]",
+	"tag-newcomer_task_update": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#update|Novaci: obnovi informacije]]",
+	"tag-newcomer_task_expand": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#expand|Novaci: proširi članak]]",
+	"tag-newcomer_task_links": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#links|Novaci: dodaj poveznice]]",
+	"tag-newcomer_task_add_link": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#s-link|Preporučeno: dodavanje poveznica]]",
 	"tag-newcomer_task_add_link-description": "»Dodaj poveznicu« preporučeno modulom za novake",
 	"growthexperiments-homepage-help-dialog-title": "Upitajte na stranici za podršku",
 	"growthexperiments-homepage-help-header": "Zatražite pomoć oko uređivanja",
