--- a/i18n/homepage/hu.json
+++ b/i18n/homepage/hu.json
@@ -110,21 +110,21 @@
 	"tag-mentorship_module_question-description": "A személyes kezdőlap mentormoduljának kérdezés funkciójával létrehozott szerkesztés.",
 	"tag-mentorship_panel_question": "Mentorpanelkérdés",
 	"tag-mentorship_panel_question-description": "A súgópanel „Kérdezz a mentorodtól” funkciójával végzett szerkesztés",
-	"tag-newcomer_task": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|kezdőknek javasolt feladat]]",
+	"tag-newcomer_task": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks|kezdőknek javasolt feladat]]",
 	"tag-newcomer_task-description": "Szerkesztés, melyet az új szerkesztők honlapjának „Javasolt szerkesztések” modulja ajánlott fel.",
-	"tag-newcomer_task_copyedit": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|Új szerkesztői feladat: copyedit]]",
+	"tag-newcomer_task_copyedit": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#copyedit|Új szerkesztői feladat: copyedit]]",
 	"tag-newcomer_task_copyedit-description": "\"Copyedit\" feladat szerkesztése, melyet az új szerkesztők főoldalán a szerkesztési javaslatok modul javasolt.",
-	"tag-newcomer_task_references": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|Új szerkesztői feladat: hivatkozások]]",
+	"tag-newcomer_task_references": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#references|Új szerkesztői feladat: hivatkozások]]",
 	"tag-newcomer_task_references-description": "\"Hivatkozások\", melyet az új szerkesztők kezdőlapjának a javasolt szerkesztések modulja ajánlott fel",
-	"tag-newcomer_task_update": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|Új szerkesztői feladat: frissítés]]",
+	"tag-newcomer_task_update": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#update|Új szerkesztői feladat: frissítés]]",
 	"tag-newcomer_task_update-description": "\"Frissítés\", melyet az új szerkesztők kezdőlapján „Javasolt szerkesztések” modulja ajánlott fel",
-	"tag-newcomer_task_expand": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|Új szerkesztői feladat: bővítés]]",
+	"tag-newcomer_task_expand": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#expand|Új szerkesztői feladat: bővítés]]",
 	"tag-newcomer_task_expand-description": "\"Bővítés\" feladat, melyet az új szerkesztők főoldalán a szerkesztési javaslatok modul javasolt",
-	"tag-newcomer_task_links": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|Új szerkesztői feladat: linkek]]",
+	"tag-newcomer_task_links": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#links|Új szerkesztői feladat: linkek]]",
 	"tag-newcomer_task_links-description": "\"Linkek\" készítése feladat, melyet az új szerkesztők kezdőlapjának a javasolt szerkesztések modulja ajánlott fel",
-	"tag-newcomer_task_add_link": "[[mw:Special:MyLanguage/Growth/Personalized first day/Structured tasks/Add a link|Javasolt szerkesztés: hivatkozások hozzáadása]]",
+	"tag-newcomer_task_add_link": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#s-link|Javasolt szerkesztés: hivatkozások hozzáadása]]",
 	"tag-newcomer_task_add_link-description": "„Hivatkozások hozzáadása” feladat szerkesztése, melyet az új szerkesztők kezdőlapján javasolt szerkesztések modulja ajánlott fel",
-	"tag-newcomer_task_image_suggestion": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Structured_tasks/Add_an_image|Javasolt szerkesztés: képek hozzáadása]]",
+	"tag-newcomer_task_image_suggestion": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#s-image|Javasolt szerkesztés: képek hozzáadása]]",
 	"tag-newcomer_task_image_suggestion-description": "„Képek hozzáadása” feladat szerkesztése, melyet az új szerkesztők kezdőlapján javasolt szerkesztések modulja ajánlott fel",
 	"growthexperiments-homepage-help-dialog-title": "Kérdés feltevése",
 	"growthexperiments-homepage-help-header": "Szerkesztési segítség",
