--- a/i18n/homepage/km.json
+++ b/i18n/homepage/km.json
@@ -6,6 +6,6 @@
 	},
 	"prefs-homepage": "មុខងារកែប្រែសម្រាប់អ្នកចំណូលថ្មី",
 	"growthexperiments-homepage-enable": "បង្ហាញគេហទំព័រអ្នកចំណូលថ្មី",
-	"tag-newcomer_task": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|ភារកិច្ចអ្នកចំណូលថ្មី]]",
+	"tag-newcomer_task": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks|ភារកិច្ចអ្នកចំណូលថ្មី]]",
 	"newcomertasksinfo": "ភារកិច្ចអ្នកចំណូលថ្មី"
 }
