--- a/i18n/homepage/nl.json
+++ b/i18n/homepage/nl.json
@@ -122,9 +122,9 @@
 	"tag-mentorship_module_question-description": "Bewerking gemaakt via de functie \"Vraag het je mentor\" op de startpagina van de mentorschapsmodule",
 	"tag-mentorship_panel_question": "Mentorschap-paneelvraag",
 	"tag-mentorship_panel_question-description": "Bewerking gemaakt vanuit de \"Vraag het je mentor\"-functie van het hulppaneel",
-	"tag-newcomer_task": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|Taak voor nieuwkomers]]",
+	"tag-newcomer_task": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks|Taak voor nieuwkomers]]",
 	"tag-newcomer_task-description": "Bewerking voorgesteld door de module voor voorgestelde bewerkingen van de startpagina voor nieuwkomers",
-	"tag-newcomer_task_add_link": "[[mw:Special:MyLanguage/Growth/Personalized first day/Structured tasks/Add a link|Voorgesteld: voeg links toe]]",
+	"tag-newcomer_task_add_link": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#s-link|Voorgesteld: voeg links toe]]",
 	"tag-newcomer_task_add_link-description": "De taakbewerking \"Link toevoegen\" voorgesteld door de module voor voorgestelde bewerkingen van de startpagina voor nieuwkomers",
 	"growthexperiments-homepage-help-dialog-title": "Stel een vraag aan de helpdesk",
 	"growthexperiments-homepage-help-header": "Krijg hulp bij bewerken",
