--- a/i18n/homepage/pl.json
+++ b/i18n/homepage/pl.json
@@ -122,21 +122,21 @@
 	"tag-mentorship_module_question-description": "Edycja wykonana za pomocą modułu przewodników „Zapytaj swojego przewodnika” dostępnego na stronie domowej dla nowicjuszy",
 	"tag-mentorship_panel_question": "Pytanie zadane przez moduł przewodników",
 	"tag-mentorship_panel_question-description": "Edycja wykonana z funkcji panelu pomocy \"Zapytaj swojego przewodnika\"",
-	"tag-newcomer_task": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|Zadanie nowicjusza]]",
+	"tag-newcomer_task": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks|Zadanie nowicjusza]]",
 	"tag-newcomer_task-description": "Edycje zasugerowane przez moduł sugerowanych edycji z witryny domowej dla nowicjuszy",
-	"tag-newcomer_task_copyedit": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|Zasugerowano edycję: poprawa stylu]]",
+	"tag-newcomer_task_copyedit": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#copyedit|Zasugerowano edycję: poprawa stylu]]",
 	"tag-newcomer_task_copyedit-description": "Zadanie „poprawa stylu” zasugerowane przez moduł sugerowanych edycji z witryny domowej dla nowicjuszy",
-	"tag-newcomer_task_references": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|Zasugerowano edycję: uzupełnienie przypisów]]",
+	"tag-newcomer_task_references": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#references|Zasugerowano edycję: uzupełnienie przypisów]]",
 	"tag-newcomer_task_references-description": "Zadanie „uzupełnienie przypisów” zasugerowane przez moduł sugerowanych edycji z witryny domowej dla nowicjuszy",
-	"tag-newcomer_task_update": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|Zasugerowano edycję: aktualizacja]]",
+	"tag-newcomer_task_update": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#update|Zasugerowano edycję: aktualizacja]]",
 	"tag-newcomer_task_update-description": "Zadanie „aktualizacja” zasugerowane przez moduł sugerowanych edycji z witryny domowej dla nowicjuszy",
-	"tag-newcomer_task_expand": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|Zasugerowano edycję: rozbudowa]]",
+	"tag-newcomer_task_expand": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#expand|Zasugerowano edycję: rozbudowa]]",
 	"tag-newcomer_task_expand-description": "Zadanie „rozbudowa” zasugerowane przez moduł sugerowanych edycji z witryny domowej dla nowicjuszy",
-	"tag-newcomer_task_links": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|Zasugerowano edycję: linki]]",
+	"tag-newcomer_task_links": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#links|Zasugerowano edycję: linki]]",
 	"tag-newcomer_task_links-description": "Zadanie „linki” zasugerowane przez moduł sugerowanych edycji z witryny domowej dla nowicjuszy",
-	"tag-newcomer_task_add_link": "[[mw:Special:MyLanguage/Growth/Personalized first day/Structured tasks/Add a link|Zasugerowano edycję: dodanie linków]]",
+	"tag-newcomer_task_add_link": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#s-link|Zasugerowano edycję: dodanie linków]]",
 	"tag-newcomer_task_add_link-description": "Zadanie „dodanie linków” zasugerowane przez moduł sugerowanych edycji z witryny domowej dla nowicjuszy",
-	"tag-newcomer_task_image_suggestion": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Structured_tasks/Add_an_image|Zasugerowano edycję: dodanie ilustracji]]",
+	"tag-newcomer_task_image_suggestion": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#s-image|Zasugerowano edycję: dodanie ilustracji]]",
 	"tag-newcomer_task_image_suggestion-description": "Zadanie „dodanie ilustracji” zasugerowane przez moduł sugerowanych edycji z witryny domowej dla nowicjuszy",
 	"growthexperiments-homepage-help-dialog-title": "Zapytaj na forum pomocy",
 	"growthexperiments-homepage-help-header": "Uzyskaj pomoc w edytowaniu",
