--- a/i18n/homepage/pt.json
+++ b/i18n/homepage/pt.json
@@ -132,21 +132,21 @@
 	"tag-mentorship_module_question-description": "Edição feita usando a funcionalidade \"perguntar ao mentor\" do módulo de mentoria na página principal",
 	"tag-mentorship_panel_question": "Pergunta do painel de mentoria",
 	"tag-mentorship_panel_question-description": "Edição feita usando a funcionalidade \"perguntar ao mentor\" do painel de ajuda",
-	"tag-newcomer_task": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|Tarefa para recém-chegados]]",
+	"tag-newcomer_task": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks|Tarefa para recém-chegados]]",
 	"tag-newcomer_task-description": "Edição sugerida pelo módulo de edições sugeridas da página principal do recém-chegado",
-	"tag-newcomer_task_copyedit": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|Tarefa para recém-chegados: revisão]]",
+	"tag-newcomer_task_copyedit": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#copyedit|Tarefa para recém-chegados: revisão]]",
 	"tag-newcomer_task_copyedit-description": "Edição para tarefa \"revisão\" sugerida pelo módulo de edições sugeridas da página principal do recém-chegado",
-	"tag-newcomer_task_references": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|Tarefa para recém-chegados: referências]]",
+	"tag-newcomer_task_references": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#references|Tarefa para recém-chegados: referências]]",
 	"tag-newcomer_task_references-description": "Edição para tarefa \"referências\" sugerida pelo módulo de edições sugeridas da página principal do recém-chegado",
-	"tag-newcomer_task_update": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|Tarefa para recém-chegados: atualização]]",
+	"tag-newcomer_task_update": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#update|Tarefa para recém-chegados: atualização]]",
 	"tag-newcomer_task_update-description": "Edição para tarefa \"atualização\" sugerida pelo módulo de edições sugeridas da página principal do recém-chegado",
-	"tag-newcomer_task_expand": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|Tarefa para recém-chegados: expansão]]",
+	"tag-newcomer_task_expand": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#expand|Tarefa para recém-chegados: expansão]]",
 	"tag-newcomer_task_expand-description": "Edição para tarefa \"expansão\" sugerida pelo módulo de edições sugeridas da página principal do recém-chegado",
-	"tag-newcomer_task_links": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|Tarefa para recém-chegados: hiperligações]]",
+	"tag-newcomer_task_links": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#links|Tarefa para recém-chegados: hiperligações]]",
 	"tag-newcomer_task_links-description": "Edição para tarefa \"hiperligações\" sugerida pelo módulo de edições sugeridas da página principal do recém-chegado",
-	"tag-newcomer_task_add_link": "[[mw:Special:MyLanguage/Growth/Personalized first day/Structured tasks/Add a link|Sugerida: adicionar hiperligações]]",
+	"tag-newcomer_task_add_link": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#s-link|Sugerida: adicionar hiperligações]]",
 	"tag-newcomer_task_add_link-description": "Edição para tarefa \"adicionar hiperligação\" sugerida pelo módulo de edições sugeridas da página principal de recém-chegado",
-	"tag-newcomer_task_image_suggestion": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Structured_tasks/Add_an_image|Sugerida: adicionar imagens]]",
+	"tag-newcomer_task_image_suggestion": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#s-image|Sugerida: adicionar imagens]]",
 	"tag-newcomer_task_image_suggestion-description": "Edição para tarefa \"adicionar imagens\" sugerida pelo módulo de edições sugeridas da página principal de recém-chegado",
 	"growthexperiments-homepage-help-dialog-title": "Perguntar na central de ajuda",
 	"growthexperiments-homepage-help-header": "Obter ajuda sobre edição",
