--- a/i18n/homepage/ro.json
+++ b/i18n/homepage/ro.json
@@ -126,21 +126,21 @@
 	"tag-mentorship_module_question-description": "Editare făcută de la funcția „Întrebați-vă mentorul” a modului de învățat de la mentor din pagina acasă",
 	"tag-mentorship_panel_question": "Întrebare de la panoul de învățat de la mentor",
 	"tag-mentorship_panel_question-description": "Editare făcută de la funcția „Întrebați-vă mentorul” a panoului de ajutor",
-	"tag-newcomer_task": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|Sarcină de nou-venit]]",
+	"tag-newcomer_task": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks|Sarcină de nou-venit]]",
 	"tag-newcomer_task-description": "Editare sugerate de modulul de editări sugerate din pagina acasă pentru nou-veniți",
-	"tag-newcomer_task_copyedit": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|Sarcină de nou-venit: corectare]]",
+	"tag-newcomer_task_copyedit": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#copyedit|Sarcină de nou-venit: corectare]]",
 	"tag-newcomer_task_copyedit-description": "Sarcina de editare „Corectare” sugerată de către modulul de editări sugerate a paginii acasă a nou-venitului",
-	"tag-newcomer_task_references": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|Sarcină de nou-venit: referințe]]",
+	"tag-newcomer_task_references": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#references|Sarcină de nou-venit: referințe]]",
 	"tag-newcomer_task_references-description": "Sarcina de editare „Referințe” sugerată de către modulul de editări sugerate a paginii acasă a nou-venitului",
-	"tag-newcomer_task_update": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|Sarcină de nou-venit: actualizare]]",
+	"tag-newcomer_task_update": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#update|Sarcină de nou-venit: actualizare]]",
 	"tag-newcomer_task_update-description": "Sarcina de editare „Actualizare” sugerată de către modulul de editări sugerate a paginii acasă a nou-venitului",
-	"tag-newcomer_task_expand": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|Sarcină de nou-venit: extindere]]",
+	"tag-newcomer_task_expand": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#expand|Sarcină de nou-venit: extindere]]",
 	"tag-newcomer_task_expand-description": "Sarcina de editare „Extindere” sugerată de către modulul de editări sugerate a paginii acasă a nou-venitului",
-	"tag-newcomer_task_links": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|Sarcină de nou-venit: legături]]",
+	"tag-newcomer_task_links": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#links|Sarcină de nou-venit: legături]]",
 	"tag-newcomer_task_links-description": "Sarcina de editare „Legături” sugerată de către modulul de editări sugerate a paginii acasă a nou-venitului",
-	"tag-newcomer_task_add_link": "[[mw:Special:MyLanguage/Growth/Personalized first day/Structured tasks/Add a link|Sugerat: adăugați legături]]",
+	"tag-newcomer_task_add_link": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#s-link|Sugerat: adăugați legături]]",
 	"tag-newcomer_task_add_link-description": "Editare sugerată de tip sarcină „Adăugați legătură” de modulul de editări sugerate din pagina acasă pentru nou-veniți",
-	"tag-newcomer_task_image_suggestion": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Structured_tasks/Add_an_image|Sugerat: adăugați imagini]]",
+	"tag-newcomer_task_image_suggestion": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#s-image|Sugerat: adăugați imagini]]",
 	"tag-newcomer_task_image_suggestion-description": "Editare sugerată de tip sarcină „Adăugați imagini” de modulul de editări sugerate din pagina acasă pentru nou-veniți",
 	"growthexperiments-homepage-help-dialog-title": "Întrebați la biroul de ajutor",
 	"growthexperiments-homepage-help-header": "Primiți ajutor cu editarea",
