--- a/i18n/homepage/sl.json
+++ b/i18n/homepage/sl.json
@@ -126,21 +126,21 @@
 	"tag-mentorship_module_question-description": "Urejanje, opravljeno z možnostjo »Vprašajte mentorja« na začetni strani mentorskega modula",
 	"tag-mentorship_panel_question": "vprašanje iz mentorskega panela",
 	"tag-mentorship_panel_question-description": "Urejanje, opravljeno z možnostjo »Vprašajte mentorja« podokna za pomoč",
-	"tag-newcomer_task": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|naloga začetnika]]",
+	"tag-newcomer_task": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks|naloga začetnika]]",
 	"tag-newcomer_task-description": "Urejanje, ki ga je predlagal modul za urejanja na začetni strani za začetnike",
-	"tag-newcomer_task_copyedit": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|naloga začetnika: lektura]]",
+	"tag-newcomer_task_copyedit": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#copyedit|naloga začetnika: lektura]]",
 	"tag-newcomer_task_copyedit-description": "Naloga urejanja »lektoriraj«, ki jo je predlagal modul za urejanja na domači strani za začetnike",
-	"tag-newcomer_task_references": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|naloga začetnika: sklici]]",
+	"tag-newcomer_task_references": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#references|naloga začetnika: sklici]]",
 	"tag-newcomer_task_references-description": "Naloga urejanja »sklici«, ki jo je predlagal modul za urejanja na domači strani za začetnike",
-	"tag-newcomer_task_update": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|naloga začetnika: posodobitev]]",
+	"tag-newcomer_task_update": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#update|naloga začetnika: posodobitev]]",
 	"tag-newcomer_task_update-description": "Opravilo urejanja »posodobi«, ki ga je predlagal modul za urejanja na domači strani za začetnike",
-	"tag-newcomer_task_expand": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|naloga začetnika: razširitev]]",
+	"tag-newcomer_task_expand": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#expand|naloga začetnika: razširitev]]",
 	"tag-newcomer_task_expand-description": "Naloga urejanja »razširi«, ki jo je predlagal modul za urejanja na domači strani za začetnike",
-	"tag-newcomer_task_links": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|naloga začetnika: povezave]]",
+	"tag-newcomer_task_links": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#links|naloga začetnika: povezave]]",
 	"tag-newcomer_task_links-description": "Naloga urejanja »povezave«, ki jo je predlagal modul za urejanja na domači strani za začetnike",
-	"tag-newcomer_task_add_link": "[[mw:Special:MyLanguage/Growth/Personalized first day/Structured tasks/Add a link|naloga začetnika: dodaj povezave]]",
+	"tag-newcomer_task_add_link": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#s-link|naloga začetnika: dodaj povezave]]",
 	"tag-newcomer_task_add_link-description": "Opravilo urejanja »Dodaj povezavo«, ki ga je predlagal modul za urejanja na domači strani za začetnike",
-	"tag-newcomer_task_image_suggestion": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Structured_tasks/Add_an_image|naloga začetnika: dodaj slike]]",
+	"tag-newcomer_task_image_suggestion": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#s-image|naloga začetnika: dodaj slike]]",
 	"tag-newcomer_task_image_suggestion-description": "Naloga urejanja »dodaj slike«, ki jo je predlagal modul za urejanja na domači strani za začetnike",
 	"growthexperiments-homepage-help-dialog-title": "Vprašanje forum za pomoč",
 	"growthexperiments-homepage-help-header": "Pridobite pomoč za urejanje",
