--- a/i18n/homepage/zh-hant.json
+++ b/i18n/homepage/zh-hant.json
@@ -120,21 +120,21 @@
 	"tag-mentorship_module_question-description": "由首頁導師計畫模組的「詢問您的導師」功能所做出編輯",
 	"tag-mentorship_panel_question": "導師計畫面板問題",
 	"tag-mentorship_panel_question-description": "由協助面板的「詢問您的導師」功能所做出編輯",
-	"tag-newcomer_task": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|新手任務]]",
+	"tag-newcomer_task": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks|新手任務]]",
 	"tag-newcomer_task-description": "編輯按新手首頁建議編輯模組的建議",
-	"tag-newcomer_task_copyedit": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|新手任務：編修]]",
+	"tag-newcomer_task_copyedit": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#copyedit|新手任務：編修]]",
 	"tag-newcomer_task_copyedit-description": "透過新手首頁建議編輯模組所建議作出的「編輯」任務編輯",
-	"tag-newcomer_task_references": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|新手任務：參考資料]]",
+	"tag-newcomer_task_references": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#references|新手任務：參考資料]]",
 	"tag-newcomer_task_references-description": "透過新手首頁建議編輯模組所建議作出的「參考資料」任務編輯",
-	"tag-newcomer_task_update": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|新手任務：更新]]",
+	"tag-newcomer_task_update": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#update|新手任務：更新]]",
 	"tag-newcomer_task_update-description": "透過新手頁面建議編輯模組所建議作出的「更新」任務編輯",
-	"tag-newcomer_task_expand": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|新手任務：擴充]]",
+	"tag-newcomer_task_expand": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#expand|新手任務：擴充]]",
 	"tag-newcomer_task_expand-description": "透過新手首頁建議編輯模組所建議作出的「擴充」任務編輯",
-	"tag-newcomer_task_links": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Newcomer_tasks|新手任務：連結]]",
+	"tag-newcomer_task_links": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#links|新手任務：連結]]",
 	"tag-newcomer_task_links-description": "透過新手頁面建議編輯模組所建議作出的「連結」任務編輯",
-	"tag-newcomer_task_add_link": "[[mw:Special:MyLanguage/Growth/Personalized first day/Structured tasks/Add a link|建議：添加連結]]",
+	"tag-newcomer_task_add_link": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#s-link|建議：添加連結]]",
 	"tag-newcomer_task_add_link-description": "透過新手頁面建議編輯模組所建議作出的「添加連結」任務編輯",
-	"tag-newcomer_task_image_suggestion": "[[mw:Special:MyLanguage/Growth/Personalized_first_day/Structured_tasks/Add_an_image|建議：加入圖片]]",
+	"tag-newcomer_task_image_suggestion": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#s-image|建議：加入圖片]]",
 	"tag-newcomer_task_image_suggestion-description": "透過新手頁面建議編輯模組所建議作出的「加入圖片」任務編輯",
 	"growthexperiments-homepage-help-dialog-title": "詢問諮詢臺",
 	"growthexperiments-homepage-help-header": "取得編輯協助",
